--- a/content/cn/2019-04-26-ngago.md
+++ b/content/cn/2019-04-26-ngago.md
@@ -38,7 +38,7 @@ tags: []
 [^5]:根据他们的预印本文章，我觉得这篇新闻稿里对该研究的介绍有夸大其词的嫌疑。受访的研究人员似乎预许了大大超出实验结果之外的期待。不过，如果他们有未发表的结果支持自己的乐观，那另当别论。
 [^6]:在这之前还有人报道 *NgAgo* 在斑马鱼里可能跟基因沉默有关。
 [^7]:如果非要找一个挖井人的话，2014年 Swarts 等人对 TtAgo 功能的报道对后来的这一系列研究是有很大的启发的。
-[^9]:Zhang 等人的工作是发现了 *NgAgo* 有依赖于同源序列敲除基因的本领，还揭示了这个本领依赖于 *NgAgo* 与 recA 互作来促进同源重组，另外，他们还颜值了 *pAgos* 普遍具备促进同源重组的本领；Solomon 等人详细分析了 *NgAgo* 的几个结构域的功能，发现了一个之前不为人知的新结构域 *repA*，并且证实了 *NgAgo* 有核酸内切酶的功能。Zhang 和 Solomon 团队的这两篇报道也有一些互相不协调的地方，比如在 Zhang 文中 Ago 的 DNA 切割特异性很好，而在 Solomon 文中有大量非特异切割；在 Zhang 文里，Ago 对同源重组的促进不依赖于导向 DNA，但是在 Solomon 文里导向 DNA 对发挥 *NgAgo* 的功能有促进作用。
+[^9]:Zhang 等人的工作是发现了 *NgAgo* 有依赖于同源序列敲除基因的本领，还揭示了这个本领依赖于 *NgAgo* 与 recA 互作来促进同源重组，另外，他们还验证了 *pAgos* 普遍具备促进同源重组的本领；Solomon 等人详细分析了 *NgAgo* 的几个结构域的功能，发现了一个之前不为人知的新结构域 *repA*，并且证实了 *NgAgo* 有核酸内切酶的功能。Zhang 和 Solomon 团队的这两篇报道也有一些互相不协调的地方，比如在 Zhang 文中 Ago 的 DNA 切割特异性很好，而在 Solomon 文中有大量非特异切割；在 Zhang 文里，Ago 对同源重组的促进不依赖于导向 DNA，但是在 Solomon 文里导向 DNA 对发挥 *NgAgo* 的功能有促进作用。
 
 
 
