--- a/content/cn/2019-04-26-ngago.md
+++ b/content/cn/2019-04-26-ngago.md
@@ -13,9 +13,9 @@ tags: []
 
 你如果没有听说过 NgAgo 或者韩春雨等关键词的话，可能会纳闷这案子是什么？何翻之有？我简单介绍一下这事，然后再解释为什么答案是“没有翻。”   
 
-2016年5月，在一个生物工程领域的顶级期刊 *Nature Biotechnology* 上发表了一篇题为 [DNA-guided genome editing using the Natronobacterium gregoryi Argonaute](https://www.nature.com/articles/nbt.3547#ref13) 的文章。这篇文章一出现，就在国内引起了哄动。我印象中当时各大媒体以类似“中国科学家在基因编辑领域取得诺奖级别成果”这样的标题进行了大量报道。发表这样成果的是河北科技大学一位叫韩春雨的副教授（通讯作者）。一来，当时由 CRISPR[^1] 技术点燃的基因编辑热潮正在汹涌，二来，取得该成果的是一位普通高校名不见经传的教师（励志啊），所以这个话题性极强的新闻获得了从科学家到普通民众的广泛关注。这关注又随着韩春雨的实验无法被他人重复，进而争吵，进而撤稿而达到高潮。最后尘埃落定，一地鸡毛。  
+2016年5月，在一个生物工程领域的顶级期刊 *Nature Biotechnology* 上发表了一篇题为 [DNA-guided genome editing using the Natronobacterium gregoryi Argonaute](https://www.nature.com/articles/nbt.3547#ref13) 的文章。这篇文章一出现，就在国内引起了哄动。我印象中当时各大媒体以类似“中国科学家在基因编辑领域取得诺奖级别成果”这样的标题进行了大量报道。发表这样成果的是河北科技大学一位叫韩春雨的副教授（通讯作者）。一来，当时由 CRISPR[^1] 技术点燃的基因编辑热潮正在汹涌，二来，取得该成果的是一位普通高校名不见经传的教师（励志啊），所以这个话题性极强的新闻获得了从科学家到普通民众的广泛关注。这关注又随着韩春雨的实验无法被他人重复，进而质疑，进而争吵，进而撤稿而达到高潮。最后尘埃落定，一地鸡毛。  
 
-基因编辑技术就是可以精确地在基因组指定位置添加，删除或者修改 DNA 序列的技术（你可以参考对 word，text 文档的编辑）。通过上世纪四十到八十年代的一系列分子生物学进展，我们知道了 DNA 是生物遗传信息的携带者，也知道了 DNA 是如何编码遗传信息的；依靠桑格发明的测序技术和后来的高通量次代测序技术（NGS），大规模读取基因组信息成为可能。不过，这时候大多数生物的基因组还只是处于“只读”状态，接下来往基因组里面写入信息就成了生命科学领域人们要挑战的下一个堡垒。换句话说，人们希望实现基因编辑。首先将这个堡垒端掉，让基因组可“写”的人是现在在美国博德研究所工作的华人科学家张锋[^2]。在2013年，利用一种叫 CRISPR-Cas9 的基因编辑工具（说白了，就是具备定点切割 DNA 的能力），张锋实现了高效简单的真核生物细胞基因编辑。自从发现 CRISPR-Cas9 系统可以在真核细胞里编辑基因后，挖掘各种可以编辑基因的“工具”成了新世纪的淘金，世界上很多研究组纷纷加入这个淘金行列。韩春雨发表在 *Nature Biotechnology* 上的名叫 NgAgo[^3] 的基因编辑工具被视为继 CRISPR-Cas9 后基因编辑领域的又一重大进展[^4]。可是，当世界上各个实验室使用 NgAgo 时，却发现它根本不能像文章里宣称的那样编辑基因；研究人员向韩春雨寻问实验细节时，却被他用各种理由敷衍；韩春雨还拒绝研究人员到他实验室观摩学习；在长达一年多的拉锯中，韩春雨实验室不仅不向外界出示自己的研究记录，也未能证明自己的实验的可重复性。面对各方的质疑，河北科大和韩春雨实验室在拖延一年多以后，终于承认该研究的不可重复性，撤回了发表的文章，但宣称**韩春雨没有主观地造假**。    
+基因编辑技术就是可以精确地在基因组指定位置添加，删除或者修改 DNA 序列的技术（你可以参考对 word，text 文档的编辑）。通过上世纪四十到八十年代的一系列分子生物学进展，我们知道了 DNA 是生物遗传信息的携带者，也知道了 DNA 是如何编码遗传信息的；依靠桑格发明的测序技术和后来的高通量次代测序技术（NGS），大规模读取基因组信息成为可能。不过，这时候大多数生物的基因组还只是处于“只读”状态，于是往基因组里面写入信息就成了生命科学领域人们要挑战的下一个堡垒---换句话说，人们希望实现基因编辑。首先将这个堡垒端掉，让基因组可“写”的人是现在在美国博德研究所工作的华人科学家张锋[^2]。在2013年，利用一种叫 CRISPR-Cas9 的基因编辑工具（说白了，就是具备定点切割 DNA 的能力），张锋实现了高效简单的真核生物细胞基因编辑。自从发现 CRISPR-Cas9 系统可以在真核细胞里编辑基因后，挖掘各种可以编辑基因的“工具”成了新世纪的淘金，世界上很多研究组纷纷加入这个淘金行列。韩春雨发表在 *Nature Biotechnology* 上的名叫 NgAgo[^3] 的基因编辑工具就是这股淘金热里涌现出来的新“利器”，被视为继 CRISPR-Cas9 后基因编辑领域的又一重大进展[^4]。可是，当世界上各个实验室使用 NgAgo 时，发现它根本不能像文章里宣称的那样编辑基因；研究人员向韩春雨寻问实验细节时，却被他用各种理由敷衍；韩春雨还拒绝研究人员到他实验室观摩学习；在长达一年多的拉锯中，韩春雨实验室不仅不向外界出示自己的研究记录，也未能证明自己的实验的可重复性。面对各方的质疑，河北科大和韩春雨实验室在拖延一年多以后，终于承认该研究的不可重复性，撤回了发表的文章，但宣称**韩春雨没有主观地造假**。    
 
 既然韩春雨的工作不可重复已是板上钉钉，清清楚楚了，那最近这些“翻案”说是怎么来的呢？原来是 purdue 大学的 Solomon 研究组2019年4月在美国化学学会全国会议上介绍他们的研究成果，认为 NgAgo 具备可编辑基因的能力。消息源在[这里](https://www.sciencedaily.com/releases/2019/04/190403080451.htm)[^5]。这是 NgAgo 诈尸了吗？由于这篇新闻稿对 Solomon 团队的研究介绍得不清楚，看得人糊涂，于是我尝试搜索看他们有没有将这成果发表出来。幸运，虽然没有正式发表于同行评审的刊物，但是 Solomon 团队将该研究的[预印本](https://www.biorxiv.org/content/biorxiv/early/2019/04/04/597237.full.pdf)上传到了 bioRxiv 网站。  
 
@@ -26,7 +26,7 @@ tags: []
 1. 韩春雨报道的是 *NgAgo* 在真核生物细胞里的基因编辑能力，而 Solomon 和 Zhang 报道的是 NgAgo 在原核生物中或者体外切割 DNA 的能力。
 2. 韩春雨报道 *NgAgo* 对靶基因的定位是基于导向 DNA 的，而 Solomon 和 Zhang 报道的 *NgAgo* 对靶基因的定位是基于同源片段的。另外，Zhang 研究组证明了 *NgAgo* 不具备基于导向 DNA 切割 DNA 的能力；而 Solomon 研究组虽然提到 *NgAgo* 在有向导 DNA 的情况下，似乎有促进编辑的可能，但是他们发现有大量的不依赖向导 DNA 的随机切割，Solomon 研究组也没有在真核细胞里做这类尝试，因为已有报道说真核细胞里的组蛋白会抑制 Ago 蛋白的活性。  
 
-也就是说，Solomon 和 Zhang 等人的正面结果和韩春雨之前的实验几乎没有任何关系（除了用的是同一个基因）；而且他们的结果也支持韩春雨之前报道的策略无法实现真核细胞里的基因编辑。所以没有什么案可翻。   
+也就是说，Solomon 和 Zhang 等人的正面结果和韩春雨之前的实验几乎没有任何关系（除了用的是同一个基因）；而且他们的结果也支持韩春雨之前报道的策略无法实现真核细胞里的基因编辑。另外，由于原核生物和真核生物的基因组结构和调控模式非常不同，即使细菌里实现了基因编辑，离真核生物的基因编辑还有极大，甚至是不可跨越的距离。所以没有什么案可翻。   
 
 看到这里，你或许会认为就算韩春雨的实验不可重复，但是至少他找到了 *NgAgo* 这个可以基因啊，这也可以算个功劳吧。可惜，这个功劳也不属于他，因为发现 *Ago* 基因家族有被用于基因编辑的潜力的也不是韩春雨，而是 John van der Oost 等。2014年 Oost 实验室的 Daan C. Swarts 等人就[报道了](https://www.nature.com/articles/nature12971.pdf)细菌 TtAgo 有依赖导向 DNA 切割 DNA 的能力。但是由于 *TtAgo* 需要在 65 度以上的高温下才能发挥这活性，所以不具备运用于真核生物基因编辑的可能。因为真核生物的细胞难以在这样的高温下生存；原核生物的蛋白在真核生物细胞里是否有相同的活性也不可预知。2015年 Swarts 等人又报道了古细菌的 *PfAgo* 也具备类似的切割 DNA 的能力。韩春雨的研究是基于 Swarts 等人2014年的结果，他们希望寻找有可能在体温环境下在真核生物细胞里编辑基因的 *Ago*。这出发点是合理的，可惜他们没有实现预定的工作，却报道了并不存在的故事。正如 Zhang 等人的文章里提到的，他们测试的 PfAgo，TtAgo，AaAgo 都有提高基于同源序列的基因编辑功能。所以 *NgAgo* 在这些基因之间并不特殊，促进基因同源片段的基因编辑可能是细菌，古细菌的 AGO 蛋白的常见功能[^7]。Zhang 等人对该现象的揭示自然是很好的贡献，而 Solomon 等人的研究对理解这类现象的机制提供了有用的细节[^9]。   
 
