--- a/content/cn/2019-04-26-ngago.md
+++ b/content/cn/2019-04-26-ngago.md
@@ -19,9 +19,9 @@ tags: []
 
 既然韩春雨的工作不可重复已是板上钉钉，清清楚楚了，那最近这些“翻案”说是怎么来的呢？原来是 purdue 大学的 Solomon 研究组2019年4月在美国化学学会全国会议上介绍他们的研究成果，认为 NgAgo 具备可编辑基因的能力。消息源在[这里](https://www.sciencedaily.com/releases/2019/04/190403080451.htm)[^5]。这是 NgAgo 诈尸了吗？由于这篇新闻稿对 Solomon 团队的研究介绍得不清楚，看得人糊涂，于是我尝试搜索看他们有没有将这成果发表出来。幸运，虽然没有正式发表于同行评审的刊物，但是 Solomon 团队将该研究的[预印本](https://www.biorxiv.org/content/biorxiv/early/2019/04/04/597237.full.pdf)上传到了 bioRxiv 网站。  
 
-看完这预印本文章后，对国内这些糊糊涂涂就提“翻案”的媒体我只觉得无语：写文章前能看看别人到底做了啥吗？    
+看完这预印本文章后，对这些糊糊涂涂就的“翻案”媒体我只觉得无语：写文章前能看看别人到底做了啥吗？    
 
-实际上，Solomon 实验室不是首个报道 NgAgo 具备基因编辑能力的；第一个[报道](https://academic.oup.com/nar/article/47/7/3568/5304309)的是华中农大的 Anding Zhang 课题组。Solomon 的文章里已引用了 Zhang 等人的研究成果[^6]。但是，这些报道跟韩春雨的报道有极大的不同：  
+实际上，Solomon 实验室不是首个报道 NgAgo 具备基因编辑能力的；第一个[报道](https://academic.oup.com/nar/article/47/7/3568/5304309)的是华中农大的 Anding Zhang 课题组。Solomon 的文章里已引用了 Zhang 等人的研究成果[^6]（张老师的文章看起来做得比较扎实，结论和论据都比较清晰，但不知为何张老师的结果没有引起媒体的关注，难道是名字没有 Solomon 看起来洋气？）。但是，这些报道跟韩春雨的报道有极大的不同：  
 
 1. 韩春雨报道的是 *NgAgo* 在真核生物细胞里的基因编辑能力，而 Solomon 和 Zhang 报道的是 NgAgo 在原核生物中或者体外切割 DNA 的能力。
 2. 韩春雨报道 *NgAgo* 对靶基因的定位是基于导向 DNA 的，而 Solomon 和 Zhang 报道的 *NgAgo* 对靶基因的定位是基于同源片段的。另外，Zhang 研究组证明了 *NgAgo* 不具备基于导向 DNA 切割 DNA 的能力；而 Solomon 研究组虽然提到 *NgAgo* 在有向导 DNA 的情况下，似乎有促进编辑的可能，但是他们发现有大量的不依赖向导 DNA 的随机切割，Solomon 研究组也没有在真核细胞里做这类尝试，因为已有报道说真核细胞里的组蛋白会抑制 Ago 蛋白的活性。  
@@ -38,7 +38,7 @@ tags: []
 [^5]:根据他们的预印本文章，我觉得这篇新闻稿里对该研究的介绍有夸大其词的嫌疑。受访的研究人员似乎预许了大大超出实验结果之外的期待。不过，如果他们有未发表的结果支持自己的乐观，那另当别论。
 [^6]:在这之前还有人报道 *NgAgo* 在斑马鱼里可能跟基因沉默有关。
 [^7]:如果非要找一个挖井人的话，2014年 Swarts 等人对 TtAgo 功能的报道对后来的这一系列研究是有很大的启发的。
-[^9]:Zhang 等人的工作是发现了 *NgAgo* 有依赖于同源序列敲除基因的本领，还揭示了这个本领依赖于 *NgAgo* 与 recA 互作来促进同源重组，另外，他们还验证了 *pAgos* 普遍具备促进同源重组的本领；Solomon 等人详细分析了 *NgAgo* 的几个结构域的功能，发现了一个之前不为人知的新结构域 *repA*，并且证实了 *NgAgo* 有核酸内切酶的功能。Zhang 和 Solomon 团队的这两篇报道也有一些互相不协调的地方，比如在 Zhang 文中 Ago 的 DNA 切割特异性很好，而在 Solomon 文中有大量非特异切割；在 Zhang 文里，Ago 对同源重组的促进不依赖于导向 DNA，但是在 Solomon 文里导向 DNA 对发挥 *NgAgo* 的功能有促进作用。将基因编辑工具运用到真核细胞里是很大的挑战。虽然从基础研究的角度看，弄清楚原核细胞和真核细胞里基因编辑系统的活性都有意义，但是真正可以广泛用于科学研究和医疗的的真核细胞的基因编辑技术。 
+[^9]:Zhang 等人的工作是发现了 *NgAgo* 有依赖于同源序列敲除基因的本领，还揭示了这个本领依赖于 *NgAgo* 与 recA 互作来促进同源重组，另外，他们还验证了 *pAgos* 普遍具备促进同源重组的本领；Solomon 等人详细分析了 *NgAgo* 的几个结构域的功能，发现了一个之前不为人知的新结构域 *repA*，并且证实了 *NgAgo* 有核酸内切酶的功能。Zhang 和 Solomon 团队的这两篇报道也有一些互相不协调的地方，比如在 Zhang 文中 Ago 的 DNA 切割特异性很好，而在 Solomon 文中有大量非特异切割；在 Zhang 文里，Ago 对同源重组的促进不依赖于导向 DNA，但是在 Solomon 文里导向 DNA 对发挥 *NgAgo* 的功能有促进作用。将基因编辑工具运用到真核细胞里是很大的挑战。虽然从基础研究的角度看，弄清楚原核细胞和真核细胞里基因编辑系统的活性都有意义，但是可以广泛用于科学研究和医疗的是真核细胞的基因编辑技术。魔鬼存在于细节 处，Zhang 文和 Solomon 文有部分内容一致，有部分内容不同，他们发现和解决了一些问题，同时也提出了新问题。
 
 
 
