--- a/content/cn/2019-04-26-ngago.md
+++ b/content/cn/2019-04-26-ngago.md
@@ -28,7 +28,7 @@ tags: []
 
 也就是说，Solomon 和 Zhang 等人的正面结果和韩春雨之前的实验几乎没有任何关系（除了用的是同一个基因）；而且他们的结果也支持韩春雨之前报道的策略无法实现真核细胞里的基因编辑。另外，由于原核生物和真核生物的基因组结构和调控模式非常不同，即使细菌里实现了基因编辑，离真核生物的基因编辑还有极大，甚至是不可跨越的距离。所以没有什么案可翻。   
 
-看到这里，你或许会认为就算韩春雨的实验不可重复，但是至少他找到了 *NgAgo* 这个可以基因啊，这也可以算个功劳吧。可惜，这个功劳也不属于他，因为发现 *Ago* 基因家族有被用于基因编辑的潜力的也不是韩春雨，而是 John van der Oost 等。2014年 Oost 实验室的 Daan C. Swarts 等人就[报道了](https://www.nature.com/articles/nature12971.pdf)细菌 TtAgo 有依赖导向 DNA 切割 DNA 的能力。但是由于 *TtAgo* 需要在 65 度以上的高温下才能发挥这活性，所以不具备运用于真核生物基因编辑的可能。因为真核生物的细胞难以在这样的高温下生存；原核生物的蛋白在真核生物细胞里是否有相同的活性也不可预知。2015年 Swarts 等人又报道了古细菌的 *PfAgo* 也具备类似的切割 DNA 的能力。韩春雨的研究是基于 Swarts 等人2014年的结果，他们希望寻找有可能在体温环境下在真核生物细胞里编辑基因的 *Ago*。这出发点是合理的，可惜他们没有实现预定的工作，却报道了并不存在的故事。正如 Zhang 等人的文章里提到的，他们测试的 PfAgo，TtAgo，AaAgo 都有提高基于同源序列的基因编辑功能。所以 *NgAgo* 在这些基因之间并不特殊，促进基因同源片段的基因编辑可能是细菌，古细菌的 AGO 蛋白的常见功能[^7]。Zhang 等人对该现象的揭示自然是很好的贡献，而 Solomon 等人的研究对理解这类现象的机制提供了有用的细节[^9]。   
+看到这里，你或许会认为就算韩春雨的实验不可重复，但是至少他找到了 *NgAgo* 这个可以基因啊，这也可以算个功劳吧。可惜，这个功劳也不属于他，因为发现 *Ago* 基因家族有被用于基因编辑的潜力的也不是韩春雨，而是 John van der Oost 等。2014年 Oost 实验室的 Daan C. Swarts 等人就[报道了](https://www.nature.com/articles/nature12971.pdf)细菌 TtAgo 有依赖导向 DNA 切割 DNA 的能力。但是由于 *TtAgo* 需要在 65 度以上的高温下才能发挥这活性，所以不具备运用于真核生物基因编辑的可能。因为真核生物的细胞难以在这样的高温下生存；原核生物的蛋白在真核生物细胞里是否有相同的活性也不可预知。2015年 Swarts 等人又报道了古细菌的 *PfAgo* 也具备类似的切割 DNA 的能力。韩春雨的研究是基于 Swarts 等人2014年的结果，他们希望寻找有可能在体温环境下在真核生物细胞里编辑基因的 *Ago*。这出发点是合理的，可惜他们没有实现预定的工作，却报道了并不存在的故事。*NgAgo* 是不是一个独特的基因呢？根据已有信息判断，我想不是。正如 Zhang 等人的文章里提到的，他们测试的 PfAgo，TtAgo，AaAgo 都有提高基于同源序列的基因编辑功能，所以 *NgAgo* 是它们中的一员，并不特殊。也就是说，促进基因同源片段的基因编辑可能是细菌，古细菌的 AGO 蛋白的常见功能[^7]。Zhang 等人对该现象的揭示自然是很好的贡献，而 Solomon 等人的研究对理解这类现象的机制提供了有用的细节[^9]。   
 
 [^8]:最后这篇算是比较中肯全面的介绍。
 [^1]:对 CRISPR 技术发展历史的介绍可以见于我以前以前一篇[博文](https://www.liechi.org/cn/2018/11/evo-3/)的后半部分。
