--- a/content/en/2019-04-30-r-notes.md
+++ b/content/en/2019-04-30-r-notes.md
@@ -7,7 +7,7 @@ categories: []
 tags: []
 from_Rmd: yes
 ---
-This post is an R learning note for myself. It will not be a comprehensive summary on R learning, but highly adapt to my own needs.   
+This post is an R learning note for myself. It will not be a comprehensive summary on R learning, but highly adapted to my own needs.   
 
 Learning by using is, I think, the best way to get new skills. I am not sure how widely this idea can be applied, but it works very well for learning programming.  
 
