--- a/content/cn/2017-03-01-翻译.md
+++ b/content/cn/2017-03-01-翻译.md
@@ -7,30 +7,31 @@ slug: Translation
 
 关于翻译，最近憋了一肚子话，源起读冯友兰的《中国哲学简史》。
 
-读完此书，除了冯先生的知识渊博，行文举重若轻之外，我特别感叹其弟子涂有光先生的翻译。之前就知道这本书原书为英文，中文版是根据英文版译的，所以开读时略微有点担心“译者替原作者拒绝了读者”[^1]，但百页读来，丝毫没有普通书译本的生硬之感，时常叹其语言的流畅优美，仿佛冯先生就在眼前，将中国哲学思想的发展历史娓娓道来，时常生出试图用自己的话复述文意，与译者一较短长的心思。涂先生是冯先生的高足，自然对这本书的内容和冯先生说话语气等都很熟悉，译后更是得到冯先生亲自审定，这样得天独厚的译本用来跟普通译作相比，是不公平的，但是竟好至如此，实在是意外之喜。
+读完此书，除了冯先生的知识渊博，行文举重若轻之外，我特别感叹其弟子涂有光先生的翻译。之前就知道这本书原书为英文，中文版是根据英文版译的，所以开读时略微有点担心“译者替原作者拒绝了读者”[^1]。但百页读来，丝毫没有普通书译本的生硬之感，时常叹其语言的流畅优美，仿佛冯先生就在眼前，将中国哲学思想的发展历史娓娓道来，让我时常生出试图用自己的话复述文意，与译者一较短长的心思。涂先生是冯先生的高足，自然对这本书的内容和冯先生说话语气等都很熟悉；后更是得到冯先生亲自审定，这样得天独厚的译本用来跟普通译作相比，是不公平的，但是竟好至如此，实在是意外之喜。
 
-这让我想起了大学的时候，为了考研，买了本非常经典的英文生物化学教材的翻译本，是由复旦大学一位德高望重的老师领衔翻译的。想在回想起来，我复习考研大概有三分之二的时间用来跟这本书搏斗了，并且惨败。我确信我认识书里所有的汉字，但是一旦他们连在一起，我看起来就觉得陌生了，这种感觉，在刚来日本念书时，看到竖版排印，从右到左念的书时也有过。可惜竖版的书看个几本就习惯了，但那本教材一直到最后我都没有能适应过来，什么时候看，都跟听一个失语很久的人在讲一个冗长的故事似的。
+这让我想起了大学的时候，为了考研，买了本非常经典的生物化学教材，原书是英文，由复旦大学一位德高望重的老师领衔翻译。现在回想起来，我复习考研时大概有三分之二的时间用来跟这本书搏斗了，并且惨败。我确信我认识书里所有的汉字，但是一旦他们连在一起，我看起来就觉得陌生了。这种感觉，在刚来日本念书时，看到竖版排印，从右到左念的书时也有过。可惜竖版的书看个几本就习惯了，但那本教材一直到最后我都没有能适应过来---什么时候看，都跟听一个失语很久的人在讲一个冗长的故事似的。
 
-平心而论，这本书不算是太坏，如果对生物化学知识有所了解，把它当作参考书，不时查询倒也不错，只是同时要跟难懂的生化知识和不通的译文作战，当年的我实在是力不能至。这是我第一次意识到好的翻译对于介绍国外的书本是如此地重要。之前看过很多英，法，俄，日，西班牙等作家的小说，散文估计是我比较幸运，遇到的译者都是相当认真，负责的。虽然不知道译文跟原文相比如何，但作为读者，我通过他们为媒介，也感受到了原作者希望带给我的喜怒哀乐，并未被其文字的佶屈聱牙所累，所以一直觉得把书译通了是理所当然的，而没有意识到译者们在这背后的艰辛付出，我愿意向他们致上我迟来的敬意。之后又遇到很多让我啼笑皆非的翻译，学术交流上，生活里都有，于是开始特别的留心身边的翻译有关的事情。
+平心而论，这本书不算是太坏。如果对生物化学知识有所了解，把它当作参考书，不时查询倒也不错。只是同时要跟难懂的生化知识和不通的译文作战，当年的我实在是力不能至。这使我第一次意识到好的翻译对于介绍国外的书本是如此地重要。之前看过很多英，法，俄，日，西班牙等作家的小说散文，估计是我比较幸运，遇到的译者都是相当认真，负责的。虽然不知道译文跟原文相比如何，但作为读者，我通过他们为媒介，也感受到了原作者希望带给我的喜怒哀乐，并未被其翻译文字的佶屈聱牙所累，所以一直觉得把书译通了是理所当然的，而没有意识到译者们在这背后的艰辛付出，我愿意向他们致上我迟来的敬意。之后又遇到很多让我啼笑皆非的翻译，学术交流上，生活里都有，于是开始特别的留心身边的翻译有关的事情。
 
-先是听说了[门修斯](http://baike.baidu.com/link?url=h-qiETqPLqOz2GNH-o41iPiLuPNvb_fULS74PH-SUO6oYgQjBEtrxMz4QC1-r9pWb6d1bbUXfZ99b2PlQJlp08dnTlBAGO7_wZuWQZGnMZqp8TNm3lCvnng1sGQG_EI9)的故事，我们古代的大哲去了趟外国，回来就名姓全变了，他若地下有知，估计得说“唯见一学棍，未见译者也”。之后是华丽的[常凯申](http://baike.baidu.com/item/%E5%B8%B8%E5%87%AF%E7%94%B3)+[昆仑](www.chinanews.com/cul/2012/01-11/3598042.shtml)二连弹，更让我猝不及防，亮瞎了好眼。蒋，毛二公都不是好惹的，幸而他们都看不到了。当时觉得这几个关键词都还押韵，于是有了下边几句：
+先是听说了[门修斯](http://baike.baidu.com/link?url=h-qiETqPLqOz2GNH-o41iPiLuPNvb_fULS74PH-SUO6oYgQjBEtrxMz4QC1-r9pWb6d1bbUXfZ99b2PlQJlp08dnTlBAGO7_wZuWQZGnMZqp8TNm3lCvnng1sGQG_EI9)的故事，我们古代的大哲去了趟外国，回来就名姓全变了。他若地下有知，估计得说“唯见一学棍，未见译者也。”之后是华丽的[常凯申](http://baike.baidu.com/item/%E5%B8%B8%E5%87%AF%E7%94%B3)+[昆仑](http://news.163.com/12/0106/00/7N20V2T700014AED.html)二连弹，更让我猝不及防，亮瞎了好眼。蒋，毛二公都不是好惹的，幸而他们都看不到了。当时觉得这几个关键词都还押韵，于是有了下边几句：
 
 > 才见门修斯，又遇常凯申，  
 惊闻念奴娇，作者是昆仑。
 
-之后还有四句，未免责人过甚，就不录了。翻译不是易事，但犯下如此低级的错误，就不是能力的问题了，完全在于是否走心。想起鲁迅二心集里面提到他跟梁实秋等人关于翻译的论战，那是在讨论什么是硬译死译，译文是要信还是要达，虽然双方各持己见，但能感觉到都是为了满足自己文学上的审美，虽然后来也加入了阶级性之类的争论，但作为文人，这种讨论的精神和严谨的态度还是很值得敬佩的。也看到他跟瞿秋白关于翻译毁灭的通信，讲他如何反复对照日译本跟德译本来矫正翻译，瞿秋白如何对于一个字的内涵也反复琢磨（这次通信，让我了解了一个锋芒毕露，跟多余的话里面不一样的瞿秋白，惊而喜，这也是希望有机会能够一聊的），如此认真负责，和现今两相比较，不禁感叹，难道真是人心不古了吗？
+之后还有四句，未免责人过甚，就不录了。翻译不是易事，但犯下如此低级的错误，就不是能力的问题了，完全在于是否走心。想起鲁迅《二心集》里面提到他跟梁实秋等人关于翻译的论战，讨论什么是硬译死译，译文是要信还是要达。虽然双方各持己见，但能感觉到都是为了满足自己文学上的审美而争。虽然后来也加入了阶级性之类的争论，但作为文人，这种讨论的精神和严谨的态度还是很值得敬佩的。也看到他跟瞿秋白关于翻译毁灭的通信，讲他如何反复对照日译本跟德译本来矫正翻译（《毁灭》），瞿秋白如何对于一个字的内涵也反复琢磨（这次通信，让我了解了一个锋芒毕露，跟《多余的话》里面不一样的瞿秋白，惊而喜，这也是希望有机会能够一聊的）。如此地认真负责，“古”今两相比较，不禁感叹，难道真是人心不古了吗？
 
-鲁迅还提到过翻译对于革新中文词语，语法的功用，哪怕是译一篇小说，想到的也是对中国语文的影响，什么是爱国，爱自己的文化，什么是智识分子的担当，我想没有比这个更好的例子了。其实我们现在的汉语，倒有很多来源于翻译引入的词句和为了译得通畅而创造的新语法，只是其中很多大家已经很熟悉，所以甚至都已经意识不到了。今天的翻译，说不定就是为以后的语言种下果子，是好果还是恶果，不可不察啊。
+鲁迅还提到过翻译对于革新中文词语，语法的功用，哪怕是译一篇小说，想到的也是对中国语文的影响。什么是爱国，爱自己的文化，什么是智识分子的担当，我想没有比这个更好的例子了。其实我们现在的汉语，有很多来源于翻译外文时引入的词句和为了译得通畅而创造的新语法，只是其中很多大家已经很熟悉，所以甚至都已经意识不到了。今天的翻译，说不定就是为以后的语言种下果子，是好果还是恶果，不可不察啊。
 
-王小波多次提到他的作文，得益于穆旦和王道乾的翻译，这倒是是让我很意外，我从王小波的文章小说里，怎么都看不出穆旦的影子，估计指的是比文字更深些的影响吧。
+王小波多次提到他的作文，得益于穆旦和王道乾的翻译，这倒是让我很意外。我从王小波的文章小说里，怎么都看不出穆旦的影子，估计指的是比文字更深些的影响吧。
 
-钱钟书对于翻译过很精辟的讨论[^2]，博学如钱先生，精通古文，白话文和数门外语，极好诗词文章，论起来翻译来自然纵横捭阖，东西兼顾，由古及今，他的议论，论的是林琴南的“译“，但其中一些话我觉得是任何要尝试翻译工作的人都该记心上的，于我来说，闻翻译而得译外之意，暂且不提。本来想转录一些钱先生的精彩议论，不过担心鹦鹉学舌，破坏了钱先生文章的美，忍住了。
+钱钟书对于翻译过很精辟的讨论[^2]。博学如钱先生，精通古文，白话文和数门外语，极好诗词文章，论起来翻译来自然纵横捭阖，东西兼顾，由古及今。他的议论，论的是林琴南的“译“，但其中一些话我觉得是任何要尝试翻译工作的人都该记心上的，于我来说，闻翻译而得译外之意，暂且不提。本来想转录一些钱先生的精彩议论，不过担心鹦鹉学舌，破坏了钱先生文章的美，忍住了。
 
 说了半天坏翻译，说几个我觉得好的吧。公认诗最难译，我就举两首诗吧。
 
 殷夫翻译的裴多菲诗，自由与爱情  
 
-> 生命诚可贵，爱情价更高。若为自由故，二者皆可抛。
+> 生命诚可贵，爱情价更高。  
+若为自由故，二者皆可抛。
 
 曾缄译仓央嘉措诗，不知道诗名。
 
@@ -56,12 +57,13 @@ slug: Translation
 连诗都能译成这样，也只有服了。
 
 
-写到这里，有点同情钱钟书先生，看了他领衔的主席诗词翻译，虽然其中颇多神来之笔，但是也有很多地方，估计是由于不敢对原文加以发挥，而屈就的结果，读来颇硬。如果钱老可以驰骋文思的话，我想应该更好吧。
+写到这里，有点同情钱钟书先生。看了他领衔的主席诗词翻译，虽然其中颇多神来之笔，但是也有很多地方，估计是由于不敢对原文加以发挥，而屈就的结果，读来颇硬。如果钱老可以驰骋文思的话，我想应该更好吧。
 
 
 曾经兴致勃勃地想跟一个爱好汉文的日本同学讲王维的田园乐的好处，诗云：
 
-> 桃红复含宿雨，柳绿更带朝烟。花落家童未扫，莺啼山客犹眠。
+> 桃红复含宿雨，柳绿更带朝烟。 
+花落家童未扫，莺啼山客犹眠。
 
 解释第一句的时候，就让我感到无比地窘迫，体会到了翻译之难，不过也由此体会到了所谓意象的含义，不过这是另外一个故事了。
 
