--- a/content/en/2019-04-30-r-notes.md
+++ b/content/en/2019-04-30-r-notes.md
@@ -22,7 +22,7 @@ If I meet a problem when using R, I often look it up online and can find a solut
 
 To improve my R skill, I decide to starting writing about experiences of using R, and routly read something on R and record the parts I feel useful.   
 
-This post is where I put my R experience. I will update it now and then to add small tips of using R. I will write a seperate post if the topic requires more space to cover.   
+This post is where I put my R experience. I will update it now and then to add small tips of using R. I will write a seperate post if the topic requires a big space to cover.   
 
 ## Input and Output 
 
