--- a/content/cn/2017-03-01-翻译.md
+++ b/content/cn/2017-03-01-翻译.md
@@ -35,7 +35,8 @@ slug: Translation
 
 曾缄译仓央嘉措诗，不知道诗名。
 
-> 曾虑多情损梵行， 入山又恐别倾城。 世间安得双全法，不负如来不负卿。 
+> 曾虑多情损梵行，入山又恐别倾城。  
+世间安得双全法，不负如来不负卿。  
 
 全诗很长，这是最后四句，不全录了，其实第一句也让我很喜欢。
 
@@ -43,15 +44,23 @@ slug: Translation
 
 柳宗元 江雪
 
-> 千山鸟飞绝，万径人踪灭， 孤舟蓑笠翁，独钓寒江雪。
+> 千山鸟飞绝，万径人踪灭，  
+孤舟蓑笠翁，独钓寒江雪。
 
-> From hill to hill no bird in flight. From path to path no man in sight. A lonely fisherman afloat, Is fishing snow in lonely boat.
+> From hill to hill no bird in flight.   
+From path to path no man in sight.   
+A lonely fisherman afloat,  
+Is fishing snow in lonely boat.
 
 高适 别董大
 
-> 千里黄云白日曛，北风吹雁雪纷纷。莫愁前路无知己，天下谁人不识君。
+> 千里黄云白日曛，北风吹雁雪纷纷。    
+莫愁前路无知己，天下谁人不识君。
 
-> Yellow clouds spread for miles and miles have veiled the day, The north wind blows down snow and wild geese fly away. Fear not you’ve no admirers as you go along! There is no connoisseur on earth but loves your song.
+> Yellow clouds spread for miles and miles have veiled the day,   
+The north wind blows down snow and wild geese fly away.  
+Fear not you’ve no admirers as you go along!   
+There is no connoisseur on earth but loves your song.
 
 
 连诗都能译成这样，也只有服了。
@@ -62,7 +71,7 @@ slug: Translation
 
 曾经兴致勃勃地想跟一个爱好汉文的日本同学讲王维的田园乐的好处，诗云：
 
-> 桃红复含宿雨，柳绿更带朝烟。 
+> 桃红复含宿雨，柳绿更带朝烟。  
 花落家童未扫，莺啼山客犹眠。
 
 解释第一句的时候，就让我感到无比地窘迫，体会到了翻译之难，不过也由此体会到了所谓意象的含义，不过这是另外一个故事了。
