--- a/content/cn/2019-04-26-ngago.md
+++ b/content/cn/2019-04-26-ngago.md
@@ -19,16 +19,16 @@ tags: []
 
 既然韩春雨的工作不可重复已是板上钉钉，清清楚楚了，那最近这些“翻案”说是怎么来的呢？原来是 purdue 大学的 Solomon 研究组2019年4月在美国化学学会全国会议上介绍他们的研究成果，认为 NgAgo 具备可编辑基因的能力。消息源在[这里](https://www.sciencedaily.com/releases/2019/04/190403080451.htm)[^5]。这是 NgAgo 诈尸了吗？由于这篇新闻稿对 Solomon 团队的研究介绍得不清楚，看得人糊涂，于是我尝试搜索看他们有没有将这成果发表出来。幸运，虽然没有正式发表于同行评审的刊物，但是 Solomon 团队将该研究的[预印本](https://www.biorxiv.org/content/biorxiv/early/2019/04/04/597237.full.pdf)上传到了 bioRxiv 网站。  
 
-看完这预印本文章后，对这些糊糊涂涂就的“翻案”媒体我只觉得无语：写文章前能看看别人到底做了啥吗？    
+看完这预印本文章后，对这些糊糊涂涂的“翻案”媒体我只觉得无语：写文章前能看看别人到底做了啥吗？    
 
-实际上，Solomon 实验室不是首个报道 NgAgo 具备基因编辑能力的；第一个[报道](https://academic.oup.com/nar/article/47/7/3568/5304309)的是华中农大的 Anding Zhang 课题组。Solomon 的文章里已引用了 Zhang 等人的研究成果[^6]（张老师的文章看起来做得比较扎实，结论和论据都比较清晰，但不知为何张老师的结果没有引起媒体的关注，难道是名字没有 Solomon 看起来洋气？）。但是，这些报道跟韩春雨的报道有极大的不同：  
+Solomon 实验室报道了 *NgAgo* 具备 DNA 内切酶活性，在细菌里有被用来实现基因编辑的潜力。实际上，Solomon 实验室不是首个报道 NgAgo 具备基因编辑能力的；第一个[报道](https://academic.oup.com/nar/article/47/7/3568/5304309)的是华中农大的 Anding Zhang 课题组。Solomon 的文章里已引用了 Zhang 等人的研究成果[^6]（张老师的文章看起来做得比较扎实，结论和论据都比较清晰，但不知为何张老师的结果没有引起媒体的关注，难道是名字没有 Solomon 看起来洋气？）。但是，这些报道跟韩春雨的报道有极大的不同：  
 
 1. 韩春雨报道的是 *NgAgo* 在真核生物细胞里的基因编辑能力，而 Solomon 和 Zhang 报道的是 NgAgo 在原核生物中或者体外切割 DNA 的能力。
-2. 韩春雨报道 *NgAgo* 对靶基因的定位是基于导向 DNA 的，而 Solomon 和 Zhang 报道的 *NgAgo* 对靶基因的定位是基于同源片段的。另外，Zhang 研究组证明了 *NgAgo* 不具备基于导向 DNA 切割 DNA 的能力；而 Solomon 研究组虽然提到 *NgAgo* 在有向导 DNA 的情况下，似乎有促进编辑的可能，但是他们发现有大量的不依赖向导 DNA 的随机切割，Solomon 研究组也没有在真核细胞里做这类尝试，因为已有报道说真核细胞里的组蛋白会抑制 Ago 蛋白的活性。  
+2. 韩春雨报道 *NgAgo* 对靶基因的定位是基于导向 DNA 的，Zhang 报道的 *NgAgo* 对靶基因的定位是基于同源片段的。另外，Zhang 研究组展示了 *NgAgo* 不具备基于导向 DNA 切割 DNA 的能力；而 Solomon 研究组虽然提到 *NgAgo* 在有向导 DNA 的情况下，似乎有促进编辑的可能，但是他们发现有大量的不依赖向导 DNA 的随机切割（Solomon 这个实验结果比较模糊，有很多值得讨论的地方，不过在这里不展开细节了）。Solomon 研究组也没有在真核细胞里做这类尝试，因为已有报道说真核细胞里的组蛋白会抑制 Ago 蛋白的活性。  
 
-也就是说，Solomon 和 Zhang 等人的正面结果和韩春雨之前的实验几乎没有任何关系（除了用的是同一个基因）；而且他们的结果也支持韩春雨之前报道的策略无法实现真核细胞里的基因编辑。另外，由于原核生物和真核生物的基因组结构和调控模式非常不同，即使细菌里实现了基因编辑，离真核生物的基因编辑还有极大，甚至是不可跨越的距离。所以没有什么案可翻。   
+也就是说，Solomon 和 Zhang 等人的正面结果和韩春雨之前的实验几乎没有任何关系（除了用的是同一个基因）；而且他们的实验结果和依据也暗示韩春雨之前报道的策略难以实现真核细胞里的基因编辑。另外，由于原核生物和真核生物的基因组结构和调控模式非常不同，即使细菌里实现了基因编辑，离真核生物的基因编辑还有极大，甚至是不可跨越的距离。所以没有什么案可翻。   
 
-看到这里，你或许会认为就算韩春雨的实验不可重复，但是至少他找到了 *NgAgo* 这个可以基因啊，这也可以算个功劳吧。可惜，这个功劳也不属于他，因为发现 *Ago* 基因家族有被用于基因编辑的潜力的也不是韩春雨，而是 John van der Oost 等。2014年 Oost 实验室的 Daan C. Swarts 等人就[报道了](https://www.nature.com/articles/nature12971.pdf)细菌 TtAgo 有依赖导向 DNA 切割 DNA 的能力。但是由于 *TtAgo* 需要在 65 度以上的高温下才能发挥这活性，所以不具备运用于真核生物基因编辑的可能。因为真核生物的细胞难以在这样的高温下生存；原核生物的蛋白在真核生物细胞里是否有相同的活性也不可预知。2015年 Swarts 等人又报道了古细菌的 *PfAgo* 也具备类似的切割 DNA 的能力。韩春雨的研究是基于 Swarts 等人2014年的结果，他们希望寻找有可能在体温环境下在真核生物细胞里编辑基因的 *Ago*。这出发点是合理的，可惜他们没有实现预定的工作，却报道了并不存在的故事。*NgAgo* 是不是一个独特的基因呢？根据已有信息判断，我想不是。正如 Zhang 等人的文章里提到的，他们测试的 PfAgo，TtAgo，AaAgo 都有提高基于同源序列的基因编辑功能，所以 *NgAgo* 是它们中的一员，并不特殊。也就是说，促进基因同源片段的基因编辑可能是细菌，古细菌的 AGO 蛋白的常见功能[^7]。Zhang 等人对该现象的揭示自然是很好的贡献，而 Solomon 等人的研究对理解这类现象的机制提供了有用的细节[^9]。   
+看到这里，你或许会认为就算韩春雨的实验不可重复，但是至少他找到了 *NgAgo* 这个可以基因啊，这也可以算个功劳吧。可惜，这个功劳也不属于他，因为发现 *Ago* 基因家族有被用于基因编辑的潜力的也不是韩春雨，而是 John van der Oost 等。2014年 Oost 实验室的 Daan C. Swarts 等人就[报道了](https://www.nature.com/articles/nature12971.pdf)细菌 TtAgo 有依赖导向 DNA 切割 DNA 的能力。但是由于 *TtAgo* 需要在 65 度以上的高温下才能发挥这活性，所以不具备运用于真核生物基因编辑的可能。因为真核生物的细胞难以在这样的高温下生存；原核生物的蛋白在真核生物细胞里是否有相同的活性也不可预知。2015年 Swarts 等人又报道了古细菌的 *PfAgo* 也具备类似的切割 DNA 的能力。韩春雨的研究是基于 Swarts 等人2014年的结果，他们希望寻找有可能在体温环境下在真核生物细胞里编辑基因的 *Ago*。这出发点是合理的，可惜他们没有实现预定的工作，却报道了并不存在的故事。*NgAgo* 是不是一个独特的基因呢？根据已有信息判断，我想不是。正如 Zhang 等人的文章里提到的，他们测试的 PfAgo，TtAgo，AaAgo 都有提高基于同源序列的基因编辑功能，所以 *NgAgo* 是它们中的一员，并不特殊。也就是说，促进基于同源片段的基因编辑可能是细菌，古细菌的 AGO 蛋白的常见功能[^7]。Zhang 等人对该现象的揭示自然是很好的贡献，而 Solomon 等人的研究对理解这类现象的机制提供了有用的细节[^9]。   
 
 [^8]:最后这篇算是比较中肯全面的介绍。
 [^1]:对 CRISPR 技术发展历史的介绍可以见于我以前以前一篇[博文](https://www.liechi.org/cn/2018/11/evo-3/)的后半部分。
