--- a/content/en/2019-04-30-r-ntoes.Rmd
+++ b/content/en/2019-04-30-r-ntoes.Rmd
@@ -1,10 +1,8 @@
 ---
-title: R note
-author: Liechi Zhang
+title: R notes
+author: Liechi
 date: '2019-04-30'
-slug: r-note
-categories: []
-tags: []
+slug: r-ntoes
 ---
 This post is an R learning note for myself. It will not be a comprehensive summary on R learning, but highly adapted to my own needs.   
 
@@ -32,9 +30,5 @@ This post is where I put my R experience. I will update it now and then to add s
 ## Programming   
 
 ## Others
-
-
-
-
 
 
