--- a/content/en/2019-04-30-r-ntoes.md
+++ b/content/en/2019-04-30-r-ntoes.md
@@ -2,9 +2,7 @@
 title: R notes
 author: Liechi
 date: '2019-04-30'
-slug: r-notes
-categories: []
-tags: []
+slug: r-ntoes
 from_Rmd: yes
 ---
 This post is an R learning note for myself. It will not be a comprehensive summary on R learning, but highly adapted to my own needs.   
@@ -33,13 +31,5 @@ This post is where I put my R experience. I will update it now and then to add s
 ## Programming   
 
 ## Others
-
-
-
-
-
-
-
-
 
 
