add a bit information

--- a/content/cn/2019-05-08-On-Evolution.Rmd
+++ b/content/cn/2019-05-08-On-Evolution.Rmd
@@ -6,7 +6,7 @@ slug: On-Evolution
 ---
 之前写过三篇关于进化的博文，简要地介绍了进化论的发展历史，现在打算再写一篇关于进化的文章。首先让我犯难的是这篇文章叫什么名字呢？我大概知道自己想写什么内容，但是觉得不好归纳出一个标题来。名不正则言不顺，我不想没有标题就动笔[^1]，但也不想被一个不成熟的标题限制了内容。想起中学的时候看过周作人的一篇文章，叫做《无生老母的信息》，觉得这宽泛的标题好，既可正名，又不会限制可写的内容[^2]。我也想来这么个标题，但是由于“信息”一词在现在这个“信息社会”有了很别致的意思，我不好再用，所以这篇就叫《进化的事情》吧[^3]。   
 
-我小时候听到拉马克的用进废退理论时，觉得很有道理，这想法很符合直觉；后来了解达尔文的自然选择学说，脑子里转了一个弯后，觉得也很有道理，这想法很合逻辑；等到中学在课本上学到木村资生的中性进化论，发现有点看不懂---不是因为不能理解他的思想，而是不能理解这个思想为何重要。那时我很困惑，为何有这么多理论来解释进化现象？它们的关系是啥？到底哪些对哪些不对？这些问题的答案我以前欲知而不可得，也问也不知道从和问起。之前的文章主要是简述了进化论发展的历史，本篇文章会涉及这些各个进化理论的具体内容[^4]，为小时候的自己。
+我小时候听到拉马克的用进废退理论时，觉得很有道理，这想法很符合直觉；后来了解达尔文的自然选择学说，脑子里转了一个弯后，觉得也很有道理，这想法很合逻辑；等到中学在课本上学到木村资生的中性进化论，发现有点看不懂---不是因为不能理解他的思想，而是不能理解这个思想为何重要。那时我很困惑，为何有这么多理论来解释进化现象？它们的关系是啥？到底哪些对哪些不对？这些问题的答案我以前欲知而不可得，问也不知道从何问起。之前的文章主要是简述了进化论发展的历史，本篇文章会涉及这些进化理论的具体内容[^4]，为小时候的自己。
 
 ### 什么是进化   
 
@@ -20,7 +20,7 @@ slug: On-Evolution
 
 ### 达尔文  
 
-达尔文的自然选择学说可能是进化理论里最被人熟知的，不过达尔文版的自然选择学说的全貌并不为人熟知。我之前提到达尔文本人就是个“拉马克主义者”，这并不是耸人听闻，想搞个大新闻的说法。二十世纪初人们对达尔文的自然选择学说有个著名的批评，说它 "may explain the survial of the fittest, but cannot explain the arrival of the fittest." 这个批评是犀利的，自然选择不能解释生物体变异是如何产生的[^5]。达尔文是不在乎 "the arrival of the fittest" 吗？不全是。达尔文没有在变异是如何产生这个问题上下大工夫，因为他认可拉马克用进废退的理论，觉得这解释了变异的产生的机制。不过跟拉马克不同的一点是，达尔文认为由于生物群体里个体数量大，所以各种各样的变异已然存在于群体里了，进化并不依赖于新的变异产生；反而是环境变化将适合生存的个体筛选出来是进化的重要过程。前文提到，进化的实质是变异的保存和遗传，而达尔文在这两个过程之间加入了一个筛选的步骤，这是一个天才的创见。根据这个思想提出的进化算法在工程领域的贡献我想会越来越受到人们重视，成为选择学说在进化论外的另一大用武之地；在哺乳动物的获得性免疫系统里和神经发育的过程中，选择理论也在起着塑性的作用，这些话题或许以后会涉及。除了变异的产生和筛选，剩下的就是变异的遗传了，那达尔文有没有考虑这个问题呢？细心如达尔文，自然不会遗漏这么重要的点。可惜，达尔文所认可的是“混合遗传”的理论。什么是混合遗传？就是平均化。红花和白花杂交生个粉红花，这就是对混合遗传最形象的叙述了。但是，混合遗传理论其实是达尔文最大的敌人，因为进化需要将特殊的个体筛选出来，而混合遗传则是倾向于将群体里的个体特征平均化，抹掉稍微有点棱角的个体。所以混合遗传理论对达尔文自然选择学说是极不友好的。怎么办？聪明如达尔文，自然不会坐以待毙。他想出了一个叫做 ["pangenesis"](https://en.wikipedia.org/wiki/Pangenesis#De_Vries) 的学说来解决这个矛盾。在这个理论里，人们可以看到达尔文和拉马克的完美合体。   
+达尔文的自然选择学说可能是进化理论里最被人熟知的，不过达尔文版的自然选择学说的全貌并不为人熟知。我之前提到达尔文本人就是个“拉马克主义者”，这并不是耸人听闻，想搞个大新闻的说法。二十世纪初人们对达尔文的自然选择学说有个著名的批评，说它 "may explain the survial of the fittest, but cannot explain the arrival of the fittest." 这个批评是犀利的，自然选择不能解释生物体变异是如何产生的[^5]。达尔文是不在乎 "the arrival of the fittest" 吗？不全是。达尔文没有在变异是如何产生这个问题上下大工夫，因为他认可拉马克用进废退的理论，觉得这解释了变异的产生的机制。不过跟拉马克不同的一点是，达尔文认为由于生物群体里个体数量大，所以各种各样的变异已然存在于群体里了，进化并不依赖于新的变异产生；反而是环境变化将适合生存的个体筛选出来是进化的重要过程。前文提到，进化的实质是变异的保存和遗传，而达尔文在这两个过程之间加入了一个筛选的步骤，这是一个天才的创见。根据这个思想提出的进化算法在工程领域的贡献我想会越来越受到人们重视，成为选择学说在进化论外的另一大用武之地；在哺乳动物的获得性免疫系统里和神经发育的过程中，选择理论也在起着塑性的作用，这些话题或许以后会涉及。除了变异的产生和筛选，剩下的就是变异的遗传了，那达尔文有没有考虑这个问题呢？细心如达尔文，自然不会遗漏这么重要的点。可惜，达尔文所认可的是“混合遗传”的理论。什么是混合遗传？就是平均化。红花和白花杂交生个粉红花，这就是对混合遗传最形象的叙述了。但是，混合遗传理论其实是达尔文最大的敌人，因为进化需要将特殊的个体筛选出来，而混合遗传则是倾向于将群体里的个体特征平均化，抹掉稍微有点棱角的个体。所以混合遗传理论对达尔文自然选择学说是极不友好的。怎么办？聪明如达尔文，自然不会坐以待毙。他想出了一个叫做 ["pangenesis"](https://en.wikipedia.org/wiki/Pangenesis#De_Vries) 的学说来解决这个矛盾。在这个理论里，人们可以看到达尔文和拉马克的完美合体。如果进化包含“变异”，“筛选”和“遗传”三个过程，我们可以看到达尔文只弄对了“筛选”，他依据的“变异”和“遗传”理论都是错误的。所以可以说达尔文的进化理论是极为不完善的。如果“筛选”这个过程在进化里起的是“定于一尊”的作用，那我们也可以说达尔文的进化理论是基本完善的，但是自然选择可以解释大多数进化现象吗？我们以后会回到这个问题。   
 
 达尔文认为生物的形态变异是连续的，形态的进化过程是渐进的。他关于形态连续变异的观点在同时期有人赞同，也有人反对，反对者里就有高尔顿，他认为生物的形态变异是离散的。而关于进化是渐进的观点，也有人反对，比如突变学派的 de Vris 和 Thomas Morgan 等人。前文没有提突变派，绝不是因为它不重要，相反，我认为进化的突变论是在其被提出时最具有科学基础的，因为突变论的发展是紧紧地跟当时最新的孟德尔遗传理论齐头并进的。突变论的提倡者 de Vris 本人就是独立重新发现孟德尔遗传学说的三人之一，并且他亲自做实验，观察到了植物的突变现象；Morgan 则是遗传连锁定律的发现者，他领导了对果蝇突变体的研究，推动了人们对生物遗传和变异理论的理解。七十年代出了一个名叫“间断平衡理论”的进化模型，其提倡者根据这个理论也提出生物进化是跃进式的，不过道金斯，本尼特等人对该理论颇有微词。我在后文还会说到这个理论。变异是连续的还是离散的，进化是渐进的还是跃进的，这些细节对于讨论进化的机制极为重要，所以希望对进化现象感兴趣的朋友将它们记住，虽然现在不一定能理解它们的重要性。   
 
