--- a/content/cn/2019-05-20-to-be-real.md
+++ b/content/cn/2019-05-20-to-be-real.md
@@ -71,9 +71,11 @@ tags: []
 依稀红楼影，  
 流光又几重。  
 
-人间悲欢，时光流转，在人是悠悠一生，在造化不过是须臾瞬间。世事变幻，不过等一切尘埃落定，估计“好一似食尽鸟投林，落了片白茫茫大地真干净！”留下了这世界，给谁感叹呢？
+人间悲欢，时光流转，在人是悠悠一生，在造化不过是须臾瞬间。世事变幻，不过等尘埃落定，一切“好一似食尽鸟投林，落了片白茫茫大地真干净！”  
 
-唉，搞深沉了，拉回来说说张岱的那一串“好”吧。这一连十二“好”活活画除了一个纨绔子弟的样子---不是薛潘那种粗莽的纨绔子弟，而是有理想，有品味，有追求的...纨绔子弟。我想好精舍，骏马什么的大家都能理解，但是那时的文人似乎对男风颇有偏好，这是为啥？  
+留下了这世界，给谁感叹？
+
+唉，搞深沉了，拉回来看看张岱的那一串“好”吧。这一连十二“好”活活画出了一个纨绔子弟的样子---不是薛潘那种粗莽的纨绔子弟，而是有理想，有品味，有追求的...纨绔子弟。我想好精舍，骏马什么的大家都能理解，但是那时的文人似乎对男风颇有偏好，这是为啥？  
 
 据说审美分四境界，为俗，雅，娇，病。我国古代的文士一般都容易将审美进行到底，也就是入了病态的境界---俗人不知其美而文士为之痴狂。京剧里的少女扮老生，男儿扮小旦；盆栽讲曲松病梅；宠物是一脸傻样的叭儿狗和眼大骇人的金鱼或许都是病态审美的结果。我对这些玩意儿都觉厌烦，不过若有人乐此不疲，我也无话可说，毕竟本家张先生说了“人无癖不可与交”嘛。   
 
