--- a/content/cn/2019-05-20-to-be-real.md
+++ b/content/cn/2019-05-20-to-be-real.md
@@ -25,7 +25,7 @@ tags: []
 赵有豫让楚屈平，卖身买得千年名。  
 巢由洗耳有何益，夷齐饿死终无成。    
 
-好吧，除了许由，伯夷叔齐也躺枪，顺便修理了一下豫让，曲平。四句诗伤了四个人，李白你还好吗？
+好吧，除了许由，伯夷叔齐也躺枪，顺便修理了一下豫让，屈平。四句诗伤了四个人，李白你还好吗？
 
 > 有耳莫洗潁川水，有口莫食首陽蕨。  
 含光混世貴無名，何用孤高比雲月？  
