--- a/content/cn/2019-05-20-to-be-real.md
+++ b/content/cn/2019-05-20-to-be-real.md
@@ -19,7 +19,7 @@ tags: []
 
 这一段深得我心，向往之。我想，如若有幸得见先生，可聊的东西定是不少。可惜，可惜。  
 
-真性情的人做事是毫不做作的。做作即不真，不真即伪，伪即人为，人为则累，何苦来哉。尧将传位于许由，许由认为自己的耳朵受到了污染，跑到颍水边去洗耳朵。今人常说“辣眼睛”，许由是不是觉得尧的话“辣耳朵”了？我想许由或许是一个有强迫症的人，类似某种洁癖，出格点也可以理解。但他的这种行为在放飞自我，一说要当官就“仰天大笑出门去”的李白看来却是虚伪做作的，十分“辣心”，于是多次写诗对其进行嘲讽：  
+真性情的人做事是毫不做作的。做作即不真，不真即伪，伪即人为，人为则累，何苦来哉。尧说自己将传位于许由，许由听后认为自己的耳朵受到了污染，跑到颍水边去洗耳朵。今人常说“辣眼睛”，表示一些事难以入目，在许由听来，尧的话可能有点“辣耳朵”了，得洗洗。我想许由或许是一个有强迫症的人，类似某种洁癖，做事出格点也可以理解。但他的这种行为在放飞自我，一说要当官就“仰天大笑出门去”的李白看来却是虚伪做作的，十分“辣心”，于是多次写诗对其进行嘲讽：  
 
 > 笑矣乎，笑矣乎。  
 赵有豫让楚屈平，卖身买得千年名。  
