--- a/content/cn/2018-11-03-3.md
+++ b/content/cn/2018-11-03-3.md
@@ -48,7 +48,7 @@ slug: evo-3
 
 当然，也有科学家声称证实了拉马克的获得性遗传理论的，这位科学家叫做保罗 卡莫若，一个略显悲情的人物。卡莫若做了一系列实验来验证拉马克的理论，其中的一个给了他巨大的声望，也在后来导致了他的死亡。有一种蟾蜍叫做助产婆，虽然是两栖动物，但是主要在陆地上交配，但是另外有一些两栖动物是在水里交配的，比如铃蟾。卡莫若观察到铃蟾在交配期腿上上会长出一些凸起，以便于在水中抱住雌性，方便交配。卡莫若想，如果把助产婆蟾养在水里，强迫它们在水中交配会怎么样。他于是设计实验，养了很多助产婆蟾在水里，由于不能交配，慢慢地很多助产婆蟾就无后而死，但是也有顺利繁衍下来的，卡莫若发现它们的腿上居然有了跟铃蟾类似的凸起。这个实验结果被当成了拉马克获得性遗传的一个重要证据（实际上这个实验可能也略有漏洞，因为有的助产婆腿上可能本来就有凸起，当然，我没有找到资料，描述卡莫若有没有检查每一只助产婆在放入水中时，腿上都没有凸起），卡莫若的声望也与日俱增。他的蟾蜍标本被大家参观完后，被保存在了酒精里。可是三年后，突然有人质疑卡莫若的对蟾蜍做了手脚，人们一去检查卡莫若的标本，就发现他的蟾蜍腿上是注射了印度墨水的。卡莫若没有辩解太多，在六个周以后，一个人走进一个山里，用一颗子弹结束了自己的生命。卡莫若瞬间变成了一个笑话，成了丑闻的代名词，在人们对卡莫若的嘲笑中，拉马克的理论也逐渐淡出了人们对进化的讨论中。卡莫若真的造假了吗？这个本来已经盖棺论定的事情由于匈牙利的作家Arthur Koestler的一本书《助产婆之案》又浮出水面。卡莫若在死前其实曾经辩解过两句，他承认标本里面有印度墨水，但是他对这个墨水哪里来的毫不知情，他的标准最开始是肯定没有墨水的，他怀疑可能是管理实验样品的人做了手脚。据说卡莫若的政治倾向明显同情苏联，由此一些人怀恨在心，或许他是被陷害的。另外，据说在卡莫若刚公布这个结果的时候，很多科学家曾经看过他的标本，还做过一些显微观察，那时候没有任何人提出异议，或者有疑似印度墨水的痕迹被发现。事情已经过去了这么久，当年卡莫若的实验结果到底如何已经无法考证了，卡莫若的死亡仿佛是拉马克理论消退时留下来的一声叹息。这时候是二十世纪三十年代。另一个支持拉马克理论的人是李森科。
 
-在讲述是who给了拉马克理论致命一击，使其在上世纪三十年代后快速消退之前，我们来回想一下，我们是如何学习进化论的。一般来说，老师说在很久很久以前，有人提出生物是会进化滴，有个叫拉马克的人提出了一个理论，后来一个叫达尔文的人提出了另一个理论，人们后来发现达尔文是对的，所以拉马克错了。我们来看看事实真的是这样吗？
+在讲述是谁给了拉马克理论致命一击，使其在上世纪三十年代后快速消退之前，我们来回想一下，我们是如何学习进化论的。一般来说，老师说在很久很久以前，有人提出生物是会进化滴，有个叫拉马克的人提出了一个理论，后来一个叫达尔文的人提出了另一个理论，人们后来发现达尔文是对的，所以拉马克错了。我们来看看事实真的是这样吗？
 
 首先，我们可以看一下拉马克的进化理论和达尔文的进化理论分别关注的是什么。拉马克的关注点是，生物的变异是怎么来的，比如长颈鹿的脖子是如何慢慢伸长的。而在达尔文那里，他的理论要点不在于研究长颈鹿的脖子是怎么变长的，他关注的是脖子长的这个特性是如何在进化中被一代代保留下来的，短脖子的是怎么一代代被淘汰掉的。也就是说，拉马克和达尔文关注的点其实是在不同的层面上的。如果我们仔细想想，会发现拉马克的理论里面，脖子长的长颈鹿一代代活了下来，这不是有点适者生存的意思吗？只是他没有明确地提出这个说法，他可能觉得脖子如何变长的更重要。再看看达尔文，他不过多地讨论脖子长这个变化是如何产生的，他其实认可拉马克的用进废退理论，觉得这可能是变异的来源之一（他也认为运动可能是产生体格差异的原因之一），但是在达尔文看来，变异本身不是进化最重要的因素，大自然这把筛子把不适合生存的生物给灭掉才是进化背后那只看不见的手。
 
