--- a/content/cn/2019-07-08-the-book.md
+++ b/content/cn/2019-07-08-the-book.md
@@ -18,19 +18,19 @@ tags: []
 
 历史上真实的玄奘从西域带回了六百五十七部梵文经书，并且自己翻译了其中的七十四部，据传剩余的经书被收藏与西安大雁塔下。    
 
-中国历史上有两位佛经的大翻译家，一位是鸠摩罗什，另一位就是玄奘了。佛经的翻译不仅有利于佛学在中国的传播，也为后世的翻译工作立了参照。民国时期，我国引入了大量的外国著作，应该如何翻译这些作品在翻译家间引发了不小的争端。鲁迅等人坚持要翻译得“信”，而梁，赵，杨（这三人是谁，感兴趣的话可以看看鲁迅当年关于翻译的论战）等学者则以顺为要。这争端还殃及了翻译《天演论》的严复，鲁迅在评价他的翻译时说：  
+中国历史上有两位佛经的大翻译家，一位是鸠摩罗什，另一位就是玄奘了。佛经的翻译不仅推动了佛学在中国的传播，也为后世的翻译工作立了参照。民国时期，我国引入了大量的外国著作，应该如何翻译这些作品在翻译家间引发了不小的争端。鲁迅等人坚持要翻译得“信”，而梁，赵，杨（这三人是谁，感兴趣的话可以看看鲁迅当年关于翻译的论战）等学者认为应该以顺为要。这争端还殃及到了翻译《天演论》的严复，引得他被瞿秋白批评。鲁迅在评价严复的翻译时说：  
 
 > 中国之译佛经，汉末质直，他没有取法。六朝真是“达”而“雅”了，他的《天演论》的模范就在此。唐则以“信”为主，粗粗一看，简直是不能懂的，这就仿佛他后来的译书。  
 
-这一段总结得实在是精辟。另外，他在论如何应该如何翻译外国人名姓时，也曾引过佛经的翻译为例子，主张严格按照音译。   
+这一段总结得实在是精辟。另外，鲁迅在论如何应该如何翻译外国人名姓时，也曾引过佛经的翻译为例子，主张严格按照音译。   
 
-我没有看过鸠摩罗什和玄奘翻译的佛经，所以不知道二者相较何如。不过根据平素看的一些零星的信息，鸠摩罗什的翻译是以顺为特点，而玄奘的翻译则是以准确为特点；他们分别代表了六朝和唐的佛经翻译风格。   
+我没有看过鸠摩罗什和玄奘翻译的佛经，所以不知道二者何如。不过根据平素看的一些零星的信息，鸠摩罗什的翻译是以顺为特点，而玄奘的翻译则是以准确为特点；他们分别代表了六朝和唐的佛经翻译风格。   
 
-佛教分小乘与大乘，我国所传的几乎都是大乘佛法。所谓小乘者，其实是自诩大乘的人对异己的蔑称。小乘是佛教的原教旨派，修行渡己，不求渡人；而大乘派则认为要普度众生。玄奘除了翻译了大量大乘佛经，还把法相宗引入了中土。由于相宗比较曲高和寡，又不与儒道切磋，所以传播极为有限；产生的影响在时间上短，人数上少。对我国的思想文化艺术没有长远影响。性宗与空宗在我国传播的佛学里算的上是显学，不过我的理解极为浅薄，就不介绍了。  
+佛教分小乘与大乘，我国所传的几乎都是大乘佛法。所谓小乘者，其实是自诩大乘的人对异己的蔑称。小乘是佛教的原教旨派，修行渡己，不求渡人；而大乘派则宣扬要普度众生。玄奘除了翻译了大量大乘佛经，还把法相宗引入了中土。由于相宗曲高和寡，又不与儒道切磋，所以传播极为有限，产生的影响在时间上短，人数上少，对我国的思想文化艺术没有长远影响。性宗与空宗在我国传播的佛学里算是显学，不过我的理解极为浅薄，无力绍介。  
 
-在我国影响最大的是禅宗，是佛，道，儒三家交流的结果，是在我国历史上和现在都有巨大影响的学派。在我看来，禅不是宗教，是哲学，是我很喜欢的一个思想体系。比较好的介绍禅的书有冯友兰的《中国哲学简史》第二十二章，胡适的《禅学指归》和铃木大拙的《禅学入門》。据说胡兰成有本书叫《禅是一枝花》，我没有看过，不知内容如何，但是我听喜欢这个名字。   
+在我国影响最大的是禅宗，是佛，道，儒三家交流的结果，在我国历史上和现在都有巨大影响的学派。在我看来，禅不是宗教，是哲学，是我很喜欢的一个思想体系。比较好的介绍禅的书有冯友兰的《中国哲学简史》第二十二章，胡适的《禅学指归》和铃木大拙的《禅学入門》。据说胡兰成有本书叫《禅是一枝花》，我没有看过，不知内容如何，但是我挺喜欢这个名字。   
 
-这是写在《西游记》后头的一点杂乱的东西，写到这里才发现文不对题，赶紧收笔吧。
+这是写在《西游记》后头的一点杂乱的东西，写到这里才发现文不对题，赶紧收笔。
 
 
 
