--- a/content/cn/2019-07-08-the-book.md
+++ b/content/cn/2019-07-08-the-book.md
@@ -26,9 +26,9 @@ tags: []
 
 我没有看过鸠摩罗什和玄奘翻译的佛经，所以不知道二者何如。不过根据平素看的一些零星的信息，鸠摩罗什的翻译是以顺为特点，而玄奘的翻译则是以准确为特点；他们分别代表了六朝和唐的佛经翻译风格。   
 
-佛教分小乘与大乘，我国所传的几乎都是大乘佛法。所谓小乘者，其实是自诩大乘的人对异己的蔑称。小乘是佛教的原教旨派，修行渡己，不求渡人；而大乘派则宣扬要普度众生。玄奘除了翻译了大量大乘佛经，还把法相宗引入了中土。由于相宗曲高和寡，又不与儒道切磋，所以传播极为有限，产生的影响在时间上短，人数上少，对我国的思想文化艺术没有长远影响。性宗与空宗在我国传播的佛学里算是显学，不过我的理解极为浅薄，无力绍介。  
+佛教分小乘与大乘，我国所传的几乎都是大乘佛法。所谓小乘者，其实是自诩大乘的人对异己的蔑称。小乘是佛教的原教旨派，修行渡己，不求渡人；而大乘派则宣扬要普度众生。玄奘除了翻译了大量大乘佛经，还把法相宗引入了中土。由于相宗曲高和寡，又不与儒道切磋，所以传播极为有限，产生的影响在时间上短，人数上少，对我国的思想文化艺术没有长远影响。大乘旗下的性宗与空宗在我国传播的佛学里算是显学，不过我的理解极为浅薄，无力绍介。  
 
-在我国影响最大的是禅宗，是佛，道，儒三家交流的结果，在我国历史上和现在都有巨大影响的学派。在我看来，禅不是宗教，是哲学，是我很喜欢的一个思想体系。比较好的介绍禅的书有冯友兰的《中国哲学简史》第二十二章，胡适的《禅学指归》和铃木大拙的《禅学入門》。据说胡兰成有本书叫《禅是一枝花》[^guandian]，我没有看过，不知内容如何，但是我挺喜欢这个名字。   
+在我国影响最大的是禅宗，是佛，道，儒三家交流的结果，是我国历史上和现在都有巨大影响的学派。在我看来，禅不是宗教，是哲学，是我很喜欢的一个思想体系。比较好的介绍禅的书有冯友兰的《中国哲学简史》第二十二章，胡适的《禅学指归》和铃木大拙的《禅学入門》[^guandian]。据说胡兰成有本书叫《禅是一枝花》，我没有看过，不知内容如何，但是我挺喜欢这个名字。   
 
 这是写在《西游记》后头的一点杂乱的东西，写到这里才发现文不对题，赶紧收笔。
 
