--- a/content/cn/2019-07-08-the-book.md
+++ b/content/cn/2019-07-08-the-book.md
@@ -16,7 +16,7 @@ tags: []
 
 一个钵盂换了五千多卷经书，看来如来也没有指着卖经买米。他要唐僧等付点“人事”才能拿走经书，或许是因为他知道人多少总要付出点代价才懂得珍惜吧。   
 
-历史上真实的玄奘从西域带回了六百五十七部梵文经书，并且自己翻译了其中的七十四部，据传剩余的经书被收藏与西安大雁塔下。    
+历史上真实的玄奘从西域带回了六百五十七部梵文经书，并且自己翻译了其中的七十四部，据传剩余的经书被收藏于西安大雁塔下。    
 
 中国历史上有两位佛经的大翻译家，一位是鸠摩罗什，另一位就是玄奘了。佛经的翻译不仅推动了佛学在中国的传播，也为后世的翻译工作立了参照。民国时期，我国引入了大量的外国著作，应该如何翻译这些作品在翻译家间引发了不小的争端。鲁迅等人坚持要翻译得“信”，而梁，赵，杨（这三人是谁，感兴趣的话可以看看鲁迅当年关于翻译的论战）等学者认为应该以顺为要。这争端还殃及到了翻译《天演论》的严复，引得他被瞿秋白批评。鲁迅在评价严复的翻译时说：  
 
