--- a/content/cn/2018-11-28-.md
+++ b/content/cn/2018-11-28-.md
@@ -10,17 +10,17 @@ tags: []
 
 昨天上午看到这个消息的时候，心里觉得很震惊，等点开看了内容后，心里升起一股凉气，继而感到愤怒。 
 
-从大前年开始，我开始在自己的实验里使用基于CRISPR-Cas9的基因编辑技术。该技术操作简单，工作效率极高，迅速成为很多科研人员的工作中常用的利器，被广泛应用于制造功能缺失突变体和荧光蛋白标记生物体等研究活动中。在用于基础研究的同时，我们也强烈地感受到，基因编辑技术以其强大，必将在未来的医疗领域大显身手，为人类的健康保驾护航，包括在**必要的时候**对人类体细胞和生殖细胞进行基因编辑。 
+从大前年开始，我开始在自己的实验里使用基于CRISPR-Cas9的基因编辑技术。该技术操作简单，工作效率极高，迅速成为很多科研人员的工作中常用的利器，被广泛应用于制造基因功能缺失突变体和荧光蛋白标记生物体等研究活动中。在用于基础研究的同时，我们也强烈地感受到，基因编辑技术以其强大的修改基因组信息的能力，必将在未来的医疗领域大显身手，为人类的健康保驾护航，包括在**必要的时候**对人类体细胞和生殖细胞进行基因编辑。 
 
 既然如此，为什么我会对这产生第一个基因编辑婴儿的研究感到愤怒呢？原因当然有，因为这个研究以一种我认为不会在科研人员身上看到的无脑方式，践踏了对人类个体的尊重；以一种我不愿意在任何人身上看到的不负责的态度，危及两个，甚至更多的孩子的安全。 
 
-昨天下午有个朋友问我对这个研究怎么看的时候附加了一句，“不涉及伦理和宗教观念方面的考量，仅从技术层面分析”。我理解他附加这句话的意思：人的伦理观和宗教观是有局限的，不符合当前伦理，宗教观的方式方法可能会产生对人类整体更好的结果。很多人或许会因为伦理或宗教理由不赞成对人类的基因信息进行人为改动，但是这不代表他们的反对有科学和效益上的道理。好吧，不提伦理宗教，我们说技术吧。技术本身不是天然的天使或者恶魔，是我们对技术的使用定义了它们的好坏。我不知道有没有“只有百利而无一害”的技术存在，在我看来，任何技术都或多或少有着利弊，我们需要根据具体的使用情景，全面地考虑了必要性和安全性后再决定是否使用某技术。我把必要性放在安全性之前是因为我理解在一些情况下，冒险是必须的。 
+昨天下午有个朋友问我对这个研究怎么看的时候附加了一句，“不涉及伦理和宗教观念方面的考量，仅从技术层面分析”。我理解他附加这句话的意思：人的伦理观和宗教观是有局限的，不符合当前伦理或宗教观的方式方法可能会产生对人类整体更好的结果。很多人或许会因为伦理或宗教理由不赞成对人类的基因信息进行人为改动，但是这不代表他们的反对有科学和效益上的道理。好吧，不提伦理宗教，我们说技术吧。技术本身不是天然的天使或者恶魔，是我们对技术的使用定义了它们的好坏。我不知道有没有“只有百利而无一害”的技术存在，在我看来，任何技术都或多或少有着利弊，我们需要根据具体的使用情景，全面地考虑了必要性和安全性后再决定是否使用某技术。我把必要性放在安全性之前是因为我理解在一些情况下，冒险是必须的。 
 
-我们先看看贺姓科研人员做了件什么事。他找了一些患有艾滋病的志愿者夫或者妇，对他们的受精卵进行了基因编辑，失活了一个叫做CCR5的基因，然后把由基因编辑过的受精卵发育而成的胚胎植回母体，孕育出基因编辑过的婴儿。为什么需要编辑*CCR5*这个基因呢？因为多种艾滋病毒需要得到这个基因产生的蛋白质的帮助才能侵入人体细胞，造成感染。如果这个基因不存在的话，那艾滋病毒就难以感染人了（说“难以”是因为有一些不依赖这个蛋白的艾滋病毒，这个基因缺失不能完全防止它们的入侵；另外，艾滋病毒本身也在快速突变，很难说什么时候会有不需要CCR5蛋白的病毒出现）。所以，贺建奎等人做基因编辑婴儿的目的就是为了让他们缺失掉这个基因，能天然抗艾滋病：不会因为父母是艾滋病毒携带者而感染艾滋；在以后的生活中，也不用太担心会被艾滋病毒侵袭。这看起来很好的一个研究，如果“不涉及伦理和宗教观念方面的考量”，那有什么问题呢？问题在于必要性和安全性。
+我们先看看贺建奎（原南科大副教授）做了件什么事。他找了一些患有艾滋病的志愿者夫或者妇，对他们的受精卵进行了基因编辑，失活了一个叫做CCR5的基因，然后把由基因编辑过的受精卵发育而成的胚胎植回母体，孕育出基因编辑婴儿。为什么需要编辑*CCR5*这个基因呢？因为多种艾滋病毒需要得到这个基因产生的蛋白质的帮助才能侵入人体细胞，造成感染。如果这个基因不存在的话，那艾滋病毒就难以感染人了（说“难以”是因为有一些不依赖这个蛋白的艾滋病毒，这个基因缺失不能完全防止它们的入侵；另外，艾滋病毒本身也在快速突变，很难说什么时候会有不需要CCR5蛋白的病毒出现）。所以，贺建奎等人做基因编辑婴儿的目的就是为了让他们缺失掉这个基因，能天然抗艾滋病：不会因为父母是艾滋病毒携带者而感染艾滋；在以后的生活中，也不用太担心会被艾滋病毒侵袭。这看起来很好的一个研究，如果“不涉及伦理和宗教观念方面的考量”，那有什么问题呢？问题在于必要性和安全性。
 
-当前，艾滋病已经有了多种治疗措施，对体细胞*CCR5*进行失活就是其中的热门方法：治疗的时候，会把艾滋病人的骨髓干细胞抽出来，进行基因编辑将*CCR5*基因失活，然后再将编辑后的骨髓干细胞转入人体，这样艾滋病毒就无法侵入到病人的细胞内造成感染。于是病人免疫系统就可以抵御多种以CCR5作为受体的艾滋病毒的攻击了。在这等利器的守护下，就算是人得了艾滋病，经过治疗后往往也能慢慢恢复免疫能力---艾滋病已不再是致命的问题了。所以产生所谓“抗艾滋的婴儿”本身没有什么必要性。在参加贺建奎等人实验的志愿者里，有些艾滋病人恢复得已经很好，据说其中有的体内已经难以检测到艾滋病毒，所以孩子受到感染的可能性本来就很低，因此也对研究中几个志愿者的孩子也没有必要进行这样的编辑（就算是艾滋病毒携带者，也有些方法可以清洁其配子，从而可能得到不收到艾滋病感染的后代）。 
+当前，我们已经有了多种治疗艾滋病的措施，对体细胞*CCR5*进行功能失活就是其中的热门方法：治疗的时候，会把艾滋病人的骨髓干细胞抽出来，进行基因编辑将*CCR5*基因失活，然后再将编辑后的骨髓干细胞转入人体，这样艾滋病毒就无法通过CCR5侵入到病人的细胞内造成感染。于是病人免疫系统就可以抵御多种以CCR5作为受体的艾滋病毒的攻击了。在这等利器的守护下，就算是人得了艾滋病，经过治疗后往往也能慢慢恢复免疫能力---艾滋病已不再是致命的问题了。所以产生所谓“抗艾滋的婴儿”本身没有必要性。在参加贺建奎等人实验的志愿者里，有些艾滋病人恢复得已经很好，据说其中有的体内已经难以检测到艾滋病毒，所以孩子受到感染的可能性本来就很低，因此其实没有必要对几个志愿者的孩子进行这样的编辑（就算是艾滋病毒携带者，也有些方法可以清洁其配子，从而可能得到不收到艾滋病感染的后代）。 
 
-当然，不做无聊之事，难遣有涯之生，如果该技术安全性过关，那就做一做当是打发时间了，似乎也没啥问题。但是，作为前提，这个技术真的安全吗，或者，真的够安全吗？答案是否定的，因为CRISPR-Cas9技术的脱靶效应。用这个技术做基因编辑，第一步就是用Cas9定点地切割基因组上的一段DNA，切割完了有两种情况：一是切完了不管它，那这段DNA就可能会发生移码突变，从而失去功能；二是切完了，给它一个修复模板，在这个模板上，你可以人为设计一段DNA序列；细胞在修复这段DNA的时候，会照着你提供的模板来修复，这样你设计的这段DNA序列就可能鱼目混珠地被掺入到基因组里，从而实现定点的基因编码修改。那CRISPR-Cas9系统是如何定点地去切割基因呢？是靠DNA的互补配对原理，A配T，C配G，这样，一条AAGGCCAAG的DNA链去“自动地”去寻找TTCCGGTTC（这里书写没有考虑方向性）这条去配对，从而实现细胞核内的导航和定位。可惜在实际使用中，CRISPR-Cas9却不一定那么精确，往往会切割掉一些目标片段以外的基因，造成我们不希望的基因突变，这就是脱靶效应，其数量取决于guide RNA 的特异性，有时候受脱靶效应影响的基因可能达到上百到上千个。而这些被误伤的基因突变后可能造成什么后果，这是无法预料的。现在我们并没有一个可以信赖的手段，可以把脱靶的风险降低到可以接受的水平。这是基因编辑技术使用于人体治疗的最大拦路虎。那贺建奎等人解决了这个基因脱靶的问题吗？答案是可悲的没有，在这样的情况下，他竟然直接对人类受精卵下手了，这是何等的无知无畏啊。贺建奎有个公司，是做测序仪的，据说他将被编辑胚胎的单细胞用于全基因组测序，验证了基因组没有意外地突变。这个说法是不能让人信服的，因为受限于现在单细胞全基因组测序的分辨率和基因组覆盖度，用该技术验证基因组没有意外突变从理论上说是不大可能的。另外，人的基因组核苷酸序列有多态性，在本身多态性噪音下，如何判断编辑技术有没有引入人为突变？当然，能降低突变率的基因编辑方法是有的，比如TALEN或者CRISPR-Cas9的nickase版本，但是据我看到的消息判断，贺建奎等人似乎没有使用这些脱靶率更低的方法，其使用的很可能是脱靶率很高的野生Cas9。虽然野生Cas9使用起来比其他几个工具要方便很多，但是将自己的便利性置于孩子的安全之上，这也是令我感到不安的原因之一（这些方法的优劣几乎是基因编辑领域的常识，所以我不认为贺建奎等人不知道有低脱靶率的方法可以选择）。
+当然，不做无聊之事，难遣有涯之生，如果该技术安全性过关，那就做一做当是打发时间了，似乎也没啥问题。但是，作为前提，这个技术真的安全吗，或者，真的够安全吗？答案是否定的，因为CRISPR-Cas9技术的脱靶效应。用这个技术做基因编辑，第一步就是用Cas9定点地切割基因组上的一段DNA~~，切割完了有两种情况：一是切完了不管它，那这段DNA就可能会发生移码突变，从而失去功能；二是切完了，给它一个修复模板，在这个模板上，你可以人为设计一段DNA序列；细胞在修复这段DNA的时候，会照着你提供的模板来修复，这样你设计的这段DNA序列就可能鱼目混珠地被掺入到基因组里，从而实现定点的基因编码修改~~（划掉的这段与主题无关，不过对一些细节感兴趣的朋友可以看看）。那CRISPR-Cas9系统是如何定位要切割的基因位置呢？是靠DNA的互补配对原理，A配T，C配G，这样，一条AAGGCCAAG的DNA链去“自动地”去寻找TTCCGGTTC（这里书写没有考虑方向性）这条去配对，从而实现细胞核内的导航和定位。可惜在实际使用中，CRISPR-Cas9却不一定那么精确，往往会切割掉一些目标片段以外的基因，造成我们不希望的基因突变，这就是脱靶效应，其数量取决于guide RNA 的特异性，有时候受脱靶效应影响的基因可能达到上百到上千个。而这些被误伤的基因突变后可能造成什么后果，这是无法预料的。现在我们并没有一个可以信赖的手段，可以把脱靶的风险降低到可以接受的水平。这是基因编辑技术使用于人体治疗的最大拦路虎。那贺建奎等人解决了这个基因脱靶的问题吗？答案是可悲的没有，在这样的情况下，他竟然直接对人类受精卵下手了，这是何等的无知无畏啊。贺建奎有个公司，是做测序仪的，据说他将被编辑胚胎的单细胞用于全基因组测序，验证了基因组没有意外地突变。这个说法是不能让人信服的，因为受限于现在单细胞全基因组测序的分辨率和基因组覆盖度，用该技术验证基因组没有意外突变从理论上说是不大可能的。另外，人的基因组核苷酸序列有多态性，在本身多态性噪音下，如何判断编辑技术有没有引入人为突变？当然，能降低突变率的基因编辑方法是有的，比如TALEN或者CRISPR-Cas9的nickase版本，但是据我看到的消息判断，贺建奎等人似乎没有使用这些脱靶率更低的方法，其使用的很可能是脱靶率很高的野生Cas9。虽然野生Cas9使用起来比其他几个工具要方便很多，但是将自己的便利性置于孩子的安全之上，这也是令我感到不安的原因之一（这些方法的优劣几乎是基因编辑领域的常识，所以我不认为贺建奎等人不知道有低脱靶率的方法可以选择）。
 
 另一个考量是CCR5缺失对人体健康的影响。一些北欧人群的CCR5有32个碱基的天然，导致他们的这个基因缩短了一截，不能作为受体工作。但是这个缩短了的CCR5并没有使他们的生长发育没有受到很大的影响。根据这个观察，或许我们可以推测CCR5不是人体发育必要的，可以作为受精卵基因编辑的靶点。但是这只能是推测，依据这个推测就直接对亚洲人进行基因组编辑是鲁莽的。因为北欧人群的基因组和我们亚洲人的基因组相比是多少有些差异的，我们不能知道那些北欧人的基因组里面是否有一些其他基因弥补了*CCR5*缺失带来的影响（当然，也有研究表明CCR5缺失可能会带来一些健康问题，感兴趣的话，大家可以自行搜索相关研究）。 
 
@@ -32,7 +32,10 @@ tags: []
 
 这个研究里基因被编辑的孩子是无辜的，可怜的。他们在人类社会没有做好欢迎的准备时降生了。虽然不知道他们是谁，但是可以想见他们的成长，婚姻，家庭将会面临很多人们没有考虑到的问题。口口声声说要为他们负责的贺建奎，不知道有没有做好负责任准备？  
 
-基因编辑技术门槛不高，从技术角度说，产生基因编辑的婴儿这个事情世界上很多实验室都可以做到。贺建奎这个“第一”不是因为他有技术，而是由于他无底线。事有可为不可为，正如爱因斯坦说的，不是才智，而是人格造就了伟大的科学家。
+基因编辑技术门槛不高，从技术角度说，产生基因编辑的婴儿这个事情世界上很多实验室都可以做到。贺建奎这个“第一”不是因为他有技术，而是由于他无底线。事有可为不可为，正如爱因斯坦说的，不是才智，而是人格造就了伟大的科学家。  
+
+---
+最近在《自然医学》杂志上发表的一篇题为 "CCR5-∆32 is deleterious in the homozygous state in humans" 的论文认为缺失了 CCR5 对个体的 "all-cause mortality rate" 比非纯合缺失者要高出 21%。这个结果否决了贺建奎等人的实验基础，即认为 CCR5 缺失突变图对人体无大害。 
 
 
 
