--- a/content/cn/2019-07-25-Van-Gogh.md
+++ b/content/cn/2019-07-25-Van-Gogh.md
@@ -40,11 +40,13 @@ tags: []
 
 > 毫无疑问，我现在就想画夜空。对我来说，夜晚比白天更多彩；有着最强烈的色调：紫，篮，绿。如果你留心，你会看到一些星是柠檬黄，另外一些呈粉红，或绿，或篮，或如勿忘我般的灿烂。勿须多言，你也明白，在蓝色的背景上画些小白点是无法画出夜空的。    
 
-梵高热爱星夜，“我不知道世间有什么是确定不变的，我只知道，只要一看到星星，我就会开始做梦。”
+梵高热爱星夜，“我不知道世间有什么是确定不变的，我只知道，只要一看到星星，我就开始做梦。”
 
 梵高说：  
 
-> 一个人绝不可以让自己心灵里的火熄灭掉，而要让它始终不断的燃烧。    
+> 人绝不可以让自己心灵里的火熄灭掉，而要让它始终不断的燃烧。     
+
+这多么像在回应尼采啊，“每一个不曾起舞的日子，都是对生命的辜负。”
 
 于是我看见了《向日葵》：   
 
@@ -54,13 +56,7 @@ tags: []
 
 同样在燃烧的，是梵高的心，然而却是孤单的：  
 
-> 在灵魂一角可能有着一座燃烧着炽热火焰的火炉，然而无人前来取暖；过客只是瞥见烟囱的一抹。   
-
-有时候，梵高让我想起尼采，他说： 
-
-> 一人绝不可以让自己心灵里的火熄灭掉，而要让它始终不断的燃烧。   
-
-这多么像在回应尼采啊，“每一个不曾起舞的日子，都是对生命的辜负。” 
+> 在灵魂一角可能有着一座燃烧着炽热火焰的火炉，然而无人前来取暖；过客只瞥见了烟囱。   
 
 梵高不停地画画，他泼洒在画布上的，不仅是色彩，更是他的生命。他在寻找，“我的体内存在着某些东西，那是什么？”  
 
