--- a/content/cn/2019-07-25-Van-Gogh.md
+++ b/content/cn/2019-07-25-Van-Gogh.md
@@ -12,7 +12,7 @@ tags: []
 
 > 当我画一个太阳，我希望人们感觉它在以惊人的速度旋转，正在发出骇人的光热巨浪。当我画一片麦田，我希望人们感觉到麦子正朝着它们最后的成熟和绽放努力。当我画一棵苹果树，我希望人们能感觉到苹果里面的果汁正把苹果皮撑开，果核中的种子正在为结出果实奋进。 当我画一个男人，我就要画出他滔滔的一生。如果生活中不再有某种无限的、深刻的、真实的东西，我不再眷恋人间。  
 
-很少有文字如此打动我，这出自一位画家。于是我打开了搜索引擎，看见了他的画。孔庆东说，心为之动才谓之“见”。    
+很少有文字如此打动我，这出自一位画家。于是我打开搜索引擎，看见了他的画。孔庆东说，心为之动才谓之“见”。    
 
 梵高说:  
 
@@ -38,7 +38,7 @@ tags: []
 
 梵高的夜空是多彩的，他说：  
 
-> 毫无疑问，我现在就想画夜空。对我来说，夜晚比白天更多彩；有着最强烈的色调：紫，篮，绿。如果你留心，你会看到一些星是柠檬黄，另外一些呈粉红，或绿，或篮，或如勿忘我般的灿烂。勿须多言，你也明白，在蓝色的背景上画些小白点是无法画出夜空的。    
+> 毫无疑问，我现在就想画夜空。对我来说，夜晚比白天更多彩；有着最强烈的色调：紫，篮，绿。如果你留心，你会看到一些星是柠檬黄的，另外一些呈粉红，或绿，或篮，或如勿忘我般的灿烂。勿须多言，你也明白，在蓝色的背景上画些小白点是无法画出夜空的。    
 
 梵高热爱星夜，“我不知道世间有什么是确定不变的，我只知道，只要一看到星星，我就开始做梦。”
 
@@ -60,9 +60,9 @@ tags: []
 
 梵高不停地画画，他泼洒在画布上的，不仅是色彩，更是他的生命。他在寻找，“我的体内存在着某些东西，那是什么？”  
 
-为了找到答案，梵高拼命地画画。“如果你的心里有个声音在说你画不成，那你就不顾一起的画下去，画下去，画到那些声音都静了。”  
+为了找到答案，梵高拼命地画画。“如果你的心里有个声音在说你画不成，那你就不顾一切地画下去，画下去，画到那些声音都静了。”  
 
-梵高找不到他心里存着的东西，可能是那个叫“我”的东西挡住了自己的视线。生活中我们都有“我”，“我”是生命的常态。但是梵高说[^fanyi]：  
+梵高找不到他心里存着的东西，可能是那个叫“我”的挡住了自己的视线。生活中我们都有“我”，“我”是生命的常态。但是梵高说[^fanyi]：  
 
 > 常态是一条铺好的路，走起来很舒服，却开不出花朵。(Normality is a paved road: It’s comfortable to walk, but no flowers grow on it.)  
 
@@ -76,17 +76,19 @@ tags: []
 
 不过梵高是坚强而高傲的，如尼采，他绝不在命运面前低下自己的头，不管现实里他多么潦倒。  
 
-> 如果以后我但有价值，那它们就蕴藏于我的现在。小麦就是小麦，哪怕在青翠的时候，别人认为它只是一株野草。(If I am worth anything later, I am worth something now. For wheat is wheat, even if people think it is a grass in the beginning.)  
+> 以后我但有价值，那它们就蕴藏于我的现在。小麦就是小麦，哪怕在青翠的时候，人们认为它只是一株野草。(If I am worth anything later, I am worth something now. For wheat is wheat, even if people think it is a grass in the beginning.)  
 
 梵高的生命在燃烧，以生活为燃料。当“生活中不再有某种无限的、深刻的、真实的东西”，梵高，梵高...  
 
-当看到《加歇医生》时，我感到一阵酸楚。  
+看到《加歇医生》时，我感到一阵酸楚。  
 
 ![DrGachet](https://upload.wikimedia.org/wikipedia/commons/thumb/1/1e/Portrait_of_Dr._Gachet.jpg/800px-Portrait_of_Dr._Gachet.jpg)  
 
-画上的加歇医生像熔化的蜡像，又像枯萎的花。我们能感觉生命正在逝去，但正在失去生命的不是加歇医生，而是正在为他作画的梵高。梵高将自己的心映射在了作品上，加歇医生是面镜子，映照出了心火正灭的梵高。  
+画上的加歇医生像熔化的蜡像，又像枯萎的花。我们能感觉生命正在逝去，但正在失去生命的不是加歇医生，而是正在为他作画的梵高。梵高将自己的心映射在了作品上，加歇医生是面镜子，映照出了心火正灭的梵高。   
 
-于是，梵高带着一把猎枪，走向了麦田。麦田上，一群乌鸦正飞向蓝的诡异的天空。  
+“如果生活中不再有某种无限的、深刻的、真实的东西，我不再眷恋人间。”   
+
+于是，梵高带着一把猎枪，走向了麦田。麦田上，一群乌鸦正飞向蓝而诡异的天空。  
 
 ![wheatfield](https://upload.wikimedia.org/wikipedia/commons/f/f3/Vincent_van_Gogh_%281853-1890%29_-_Wheat_Field_with_Crows_%281890%29.jpg)  
 
