--- a/content/cn/2019-07-25-Van-Gogh.md
+++ b/content/cn/2019-07-25-Van-Gogh.md
@@ -38,7 +38,7 @@ tags: []
 
 梵高的夜空是多彩的，他说：  
 
-> 毫无疑问，我现在就想画夜空。对我来说，夜晚比白天更多彩；有着最强烈的色调：紫，篮，绿。如果你留心，你会看到一些星是柠檬黄的，另外一些呈粉红，或绿，或篮，或如勿忘我般的灿烂。勿须多言，你也明白，在蓝色的背景上画些小白点是无法画出夜空的。    
+> 毫无疑问，我现在就想画夜空。对我来说，夜晚比白天更多彩；有着最强烈的色调：紫，篮，绿。如果你留心，你会看到一些星是柠檬黄的，另外一些呈粉红，或绿，或篮，或如勿忘我般的灿烂。勿须多言，你也明白，在蓝色的背景上画些小白点是无法画出夜空的。[^fy]    
 
 梵高热爱星夜，“我不知道世间有什么是确定不变的，我只知道，只要一看到星星，我就开始做梦。”
 
@@ -100,10 +100,11 @@ tags: []
 
 梵高找到了他心里存着的东西了吗？我想他找到了，他说：  
 
-> 人心似海，有岚有潮；有境于深，珍珠闪耀。（The heart of man is very much like the sea, it has its storms, it has its tides and in its depths it has its pearls too.）  
+> 人心似海，有岚有潮；有境于深，珍珠闪耀。(The heart of man is very much like the sea, it has its storms, it has its tides and in its depths it has its pearls too.)    
 
 
-[^fanyi]:以下后缀了英文的话是我根据英文翻译的，附上所据的英文材料，以便对照。
+[^fy]: 这一段是我根据英文翻译的，由于比较长，把原文附在注释里：At present I absolutely want to paint a starry sky. It often seems to me that night is still more richly coloured than the day; having hues of the most intense violets, blues and greens. If only you pay attention to it you will see that certain stars are lemon-yellow, others pink or a green, blue and forget-me-not brilliance. And without my expatiating on this theme it is obvious that putting little white dots on the blue-black is not enough to paint a starry sky.
+[^fanyi]: 以下后缀了英文的话是我根据英文翻译的，附上所据的英文材料，以便对照。
 
 
 
