修正一个数据

--- a/content/cn/2019-04-12-hawking.md
+++ b/content/cn/2019-04-12-hawking.md
@@ -20,7 +20,7 @@ tags: []
 
 霍金是一个在很多方面被符号化了的人，得不得诺奖并不会增加或者减少他的知名度，不过还是可以说说这句话。黑洞是个神秘的概念（在这个观察之前），尤其是其在奇点密度发散这个特质牵动了物理学家和物理学爱好者的心。因为这个发散在现有的物理框架下会导出许多难以自冾的问题，这些问题的解决或许是新物理学的突破口。霍金这句话里黑洞前的定语 "exploding" 一词尤为重要，因为光是拍到黑洞并不能给霍金带来诺奖，就算他还活着。因为在相对论框架下最早预测黑洞的是“史瓦之子”（Schwarzschild，一般翻译为史瓦西)，而在更早时候，在牛顿力学框架下，米歇尔和拉普拉斯也描述过“光都跑不出来的”天体。霍金的贡献是将量子效应纳入了黑洞研究，提出了霍金辐射，并且定量了辐射率和黑洞质量的关系---随着黑洞质量的减少，辐射率会增加。等到黑洞临终前的一刹那，大量的物质在约0.1秒的时间内被辐射出来，如同一个爆炸。所以，观察到爆炸的黑洞是验证霍金辐射模型的方式之一，这就是为什么 "exploding" 这个定语很重要了。黑洞会爆炸？迄今为止这也是个大问题，因为黑洞爆炸后其中储藏的信息去哪儿了？这个暂且不论，说回黑洞的爆炸吧。       
 
-要观察黑洞爆炸，这是个难如登天的事情。质量和太阳相当的黑洞（一个天体塌缩成黑洞大概需要具备一个半太阳的质量，那为什么会有和太阳质量相当或小于太阳质量的黑洞，这是个有意思的问题）通过霍金辐射爆发的时间会远长于我们宇宙的年纪，所以不用想着去找它们了；在宇宙形成早起出现的小质量的黑洞则早就自爆了。离我们远的小黑洞爆炸我们可能完全看不到，离我们近的，额，但愿没有离我们太近的黑洞要爆炸。另外，要是看到宇宙里有一阵强光，那到底是超新星爆发出来的还是黑洞爆发出来的呢？我不知这能不能区分。最好是我们先拍到一个黑洞，看到它乖乖待着，过一段时间，嘭地一声炸没了，那就完美了。可惜这次拍到的黑洞太大，等它爆炸了黄花菜都凉了几轮宇宙了。   
+要观察黑洞爆炸，这是个难如登天的事情。质量和太阳相当的黑洞（一个天体塌缩成黑洞大概需要具备两个半太阳的质量，那为什么会有和太阳质量相当或小于太阳质量的黑洞，这是个有意思的问题）通过霍金辐射爆发的时间会远长于我们宇宙的年纪，所以不用想着去找它们了；在宇宙形成早起出现的小质量的黑洞则早就自爆了。离我们远的小黑洞爆炸我们可能完全看不到，离我们近的，额，但愿没有离我们太近的黑洞要爆炸。另外，要是看到宇宙里有一阵强光，那到底是超新星爆发出来的还是黑洞爆发出来的呢？我不知这能不能区分。最好是我们先拍到一个黑洞，看到它乖乖待着，过一段时间，嘭地一声炸没了，那就完美了。可惜这次拍到的黑洞太大，等它爆炸了黄花菜都凉了几轮宇宙了。   
 
 霍金辐射本身是个很美的物理模型，如果是真实存在的，那就是在这美之上再添了花。如果实际上并不存在，那也没关系，因为想法本身是美的。  
 
