--- a/content/cn/2019-09-27-.md
+++ b/content/cn/2019-09-27-.md
@@ -1,5 +1,5 @@
 ---
-title: 由葛饰北斋想到
+title: 由葛饰北斋的画想到
 author: 张列弛
 date: '2019-09-27'
 slug: 'hokusai'
@@ -75,7 +75,7 @@ tags: []
 
 他笔下的生灵有着自己的情绪。
 
-葛饰北斋的话，虽然很美，很干净，但是我在画里却无法接近他---那个悍然宣称自己七十岁以前的画都不值一提的倔老头。而在梵高，朱耷的画里，我在看着画，同时仿佛也在看着他们的人生。     
+葛饰北斋的画，虽然很美，很干净，但是从他的画里我感到无法接近他---那个悍然宣称自己七十岁以前的画都不值一提的倔老头。而在梵高，朱耷的画里，我在看着画，同时仿佛也在看着他们的人生。     
 
 
 
