--- a/content/cn/2019-09-27-.md
+++ b/content/cn/2019-09-27-.md
@@ -14,7 +14,7 @@ tags: []
 
 从讲故事的角度来说，这幅画在我看来是失败的。我第一次看到它的时候，以为是一群人在跳大神。然而，葛饰本来画的却是日本江尻要道风大，吹得行人不能自已的场景：行人帽纸满天窜，岿然不动富士山。虽然对画的内容理解颇偏，但我想我感受到了葛饰要表达的那种动静之前的张力。      
 
-葛饰北斋最广为人知的画是《富嶽三十六景》里的另外一幅，《神奈川沖浪里》。   
+葛饰北斋更广为人知的画是《富嶽三十六景》里的另外一幅，《神奈川沖浪里》。   
 
 ![](https://upload.wikimedia.org/wikipedia/commons/thumb/0/0a/The_Great_Wave_off_Kanagawa.jpg/1920px-The_Great_Wave_off_Kanagawa.jpg)  
 
