--- a/content/cn/2019-09-27-.md
+++ b/content/cn/2019-09-27-.md
@@ -27,7 +27,7 @@ tags: []
 > 当我幼小的时候，本就爱看快舰激起的浪花，洪炉喷出的烈焰。不但爱看，还想看清。可惜他们都息息变幻，永无定形。虽然凝视又凝视，总不留下怎样一定的迹象。
 死的火焰，现在先得到了你了!   
 
-能看清的火固然让鲁迅心喜，但却是死火。
+能看清的火固然让鲁迅心喜，但却是死的---如同葛饰北斋的浪花。
 
 葛饰北斋的浪花让我想起了一副梵高的画，《雨中的麦田》。  
 
@@ -75,7 +75,7 @@ tags: []
 
 他笔下的生灵有着自己的情绪。
 
-葛饰北斋的画，虽然很美，很干净，但是从他的画里我感到无法接近他---那个悍然宣称自己七十岁以前的画都不值一提的倔老头。而在梵高，朱耷的画里，我在看着画，同时仿佛也在看着他们的人生。     
+葛饰北斋的画，虽然很美，很干净，但是从他的画里我感到无法接近他---那个悍然宣称自己七十岁以前的画都不值一提的倔老头。而梵高和朱耷，我看着他们的画，同时仿佛也看了他们的人生。     
 
 
 
