--- a/content/cn/2019-07-25-Van-Gogh.md
+++ b/content/cn/2019-07-25-Van-Gogh.md
@@ -88,7 +88,7 @@ tags: []
 
 “如果生活中不再有某种无限的、深刻的、真实的东西，我不再眷恋人间。”   
 
-于是，梵高带着一把猎枪，走向了麦田。麦田上，一群乌鸦正飞向蓝而诡异的天空。  
+于是，梵高带着一把枪，走向了麦田。麦田上，一群乌鸦正飞向蓝而诡异的天空。  
 
 ![wheatfield](https://upload.wikimedia.org/wikipedia/commons/f/f3/Vincent_van_Gogh_%281853-1890%29_-_Wheat_Field_with_Crows_%281890%29.jpg)  
 
