--- a/content/cn/2019-10-12-typhoon.md
+++ b/content/cn/2019-10-12-typhoon.md
@@ -19,7 +19,7 @@ tags: []
 > 折花逢驿使，寄与陇头人。  
 江南无所有，聊赠一枝春。   
 
-不知驿使是否真把这春意带给了陇头人。若如此，那他用从江南到陇地的脚步也写了首诗。   
+不知驿使是否真把这春意带给了陇头人。若真如此，那他用从江南到陇地的脚步也写了首诗。   
 
 子夜四时歌  
 
@@ -33,7 +33,7 @@ tags: []
 > 山中何所有，岭上多白云。  
 只可自怡悦，不堪持赠君。   
 
-这首小诗是陶弘景隐居后写的。他收到来自齐高帝萧道成的诏书，问他“山中何所有？”此诗便是陶弘景的回答。我想陶先生的隐居生活是极舒服的，白云“自怡悦”，此乐君不知。现在我们有了照相机和摄像机，不管看到什么都能拍个不停，但是却不知道身处美景时“自怡悦”了没有？拍完了照片了视频自己回味了多少？   
+这首小诗是陶弘景隐居后写的。他收到来自齐高帝萧道成的诏书，问他“山中何所有？”此诗便是陶弘景的回答。我想陶先生的隐居生活是极舒服的，白云“自怡悦”，此乐君不知。现在我们有了照相机和摄像机，不管看到什么都能拍个不停，但是却不知道身处美景时“自怡悦”了没有？拍好的照片和视频我们自己回味了多少？   
 
 这首诗还让我想起了鲁迅的一篇杂文，《谈皇帝》。其中记载了鲁迅家乡的“老仆妇”所知道的对付皇帝的办法，她说：   
 
@@ -47,7 +47,7 @@ Azalea 曾留言[感叹](http://disq.us/p/224fnh0)平凡的董传由苏轼的诗
 
 天暗下来了，屋外风似乎小了些，雨还在下。打开手机看了下微信消息，我妈说我前天我从网上订的大闸蟹今天收到了，打算晚饭的时候吃；有几个朋友在讨论时事，主要是 NBA 季前赛爆满事件和无锡的高架桥倒塌事件。新泡了壶茶，顺便看了下昨天油炸的豆腐，还剩很多，足以就风。安心地回到桌前，坐等风吹。   
 
-这几天正好在颁发诺贝尔奖，看了得奖预测的朋友告诉我说今年的化学奖有可能发给基因编辑技术，不过实际上是发给了锂电池的发明者。预测基因编辑技术会得奖其实是个没有太大意义的事情，因为几乎可以确定该技术会拿诺奖，问题是哪年，以及给谁。其中，“给谁”是个大问题，因为参与基因编辑技术发展且有较大贡献的人比较多；其中最常用的 CRISPR 技术的发明者间还在闹专利纠纷。把握平衡需要评委们费点脑筋。如果“给谁”的问题解决了，“哪年”就不是问题了，肯定会很快。   
+这几天正好在颁发诺贝尔奖，看了得奖预测的朋友告诉我说今年的化学奖有可能发给基因编辑技术，不过实际上是发给了锂电池的发明者。预测基因编辑技术会得奖其实是个没有太大意义的事情，因为几乎可以确定该技术会拿诺奖，问题是哪年，以及给谁。其中，“给谁”是个大问题，参与基因编辑技术发展且有较大贡献的人比较多；而且其中最常用的 CRISPR 技术的发明者间还在闹专利纠纷。把握平衡需要评委们费点脑筋。如果“给谁”的问题解决了，“哪年”就不是问题了，肯定会很快。   
 
 每年诺奖颁奖都会受到很多人的关注，我想，这反应了人们对科学和技术在社会发展的正面作用的认可。人们在社会建设中应用科技发展获得的成果，并取得了巨大的成功；这成功增进了人们对科技，以及对人自己的信心；这信心反馈在人自身，激励了人们进一步发展科技的劲头。这样的情形在很大程度上改变了人们对科技本身的认识：本来，科技是认识世界的方法之一，现在在很多人眼中，科技却似乎正在成为认识世界唯一的方法。对科技这样的认识和信心正在让我们轻率地踏入一些我们本应该心怀敬畏的地方。         
 
@@ -60,7 +60,7 @@ Azalea 曾留言[感叹](http://disq.us/p/224fnh0)平凡的董传由苏轼的诗
 > 这东西已经占有了人，并且这种占有是如此地明确以至于人只有被如此占有才能是人。   
 
 
-是的，我们在构建一个越来越复杂的结构。如果一个人有能力为这个结构加砖添瓦，他就被称为“有用的人。”人的价值似乎是依附于这个结构。我们觉得我们在设计和制造它，但是现实是我们正变得停不下来---我们不能控制这个结构，它却在控制着我们。   
+是的，我们在构建一个越来越复杂的结构。如果一个人有能力为这个结构加砖添瓦，他就被称为“有用的人。”人的价值似乎是依附于这个结构。人们觉得是我们自己在设计和制造它，我们在掌控主导权；但是现实是我们正变得停不下来---我们不能控制这个结构，它却在控制着我们。   
 
 海德格尔在接受《明镜》的采访时说：   
 
