--- a/content/cn/2019-10-12-typhoon.md
+++ b/content/cn/2019-10-12-typhoon.md
@@ -19,14 +19,14 @@ tags: []
 > 折花逢驿使，寄与陇头人。  
 江南无所有，聊赠一枝春。   
 
-不知驿使是否真把这春意带给了陇头人。若真如此，那他用从江南到陇地的脚步也写了首诗。   
+不知驿使是否真把这春意带给了陇头人。若真如此，那他用从江南到陇地的脚步也写就了一首诗。   
 
 子夜四时歌  
 
 > 春林花多媚，春鸟意多哀。  
 春风复多情，吹我罗裳开。   
 
-本来诗忌用字重复，但是这里反复出现的“春”却似渐渐将一副美丽的画卷展开，显出了春天生机勃勃的景象。到“春风复多情，吹我罗裳开，”这画卷突然动了起来，读诗的我也好像感到衣袂被春风掀起，进入了诗里。我感到的春意不来自现实，而是来自许久以前存在记忆里的某个春天，它被这小诗轻轻地唤醒了。吴为山先生有个雕塑作品叫《春风》：一个小姑娘裙袂飘飘，头微微扬起，脸上带着笑。其实，《春风》刻画的形象很模糊，我们看不清小女孩的眉眼和表情，但是我们能感觉到她在微风里的快乐，而且能感到那吹起衣袂的应是一阵春风。在某种意义上，我觉得《春风》和这《子夜四时歌》是等价的。     
+本来诗忌用字重复，但是这里反复出现的“春”却似渐渐将一幅美丽的画卷展开，显出了春天生机勃勃的景象。到“春风复多情，吹我罗裳开，”这画卷突然动了起来，读诗的我也好像感到衣袂被春风掀起，进入了诗里。我感到的春意不来自现实，而是来自许久以前存在记忆里的某个春天，它被这小诗轻轻地唤醒了。吴为山先生有个雕塑作品叫《春风》：一个小姑娘裙袂飘飘，头微微扬起，脸上带着笑。其实，《春风》刻画的形象很模糊，我们看不清小女孩的眉眼和表情，但是我们能感觉到她在微风里的快乐，而且能感到那吹起衣袂的应是一阵春风。在某种意义上，我觉得《春风》和这《子夜四时歌》是等价的。     
 
 《诏问山中何所有赋诗以答》（陶弘景）  
 
