--- a/content/cn/2019-10-12-typhoon.md
+++ b/content/cn/2019-10-12-typhoon.md
@@ -26,7 +26,7 @@ tags: []
 > 春林花多媚，春鸟意多哀。  
 春风复多情，吹我罗裳开。   
 
-本来诗忌用字重复，但是这里反复出现的“春”却似渐渐将一幅美丽的画卷展开，显出了春天生机勃勃的景象。到“春风复多情，吹我罗裳开，”这画卷突然动了起来，读诗的我也好像感到衣袂被春风掀起，进入了诗里。我感到的春意不来自现实，而是来自许久以前存在记忆里的某个春天，它被这小诗轻轻地唤醒了。吴为山先生有个雕塑作品叫《春风》：一个小姑娘裙袂飘飘，头微微扬起，脸上带着笑。其实，《春风》刻画的形象很模糊，我们看不清小女孩的眉眼和表情，但是我们能感觉到她在微风里的快乐，而且能感到那吹起衣袂的应是一阵春风。在某种意义上，我觉得《春风》和这《子夜四时歌》是等价的。     
+本来诗忌用字重复，但是这里反复出现的“春”却似渐渐将一幅美丽的画卷展开，显出了春天生机勃勃的景象。到“春风复多情，吹我罗裳开，”这画卷突然动了起来，读诗的我也好像感到衣袂被春风掀起，进入了诗里。我感到的春意不来自现实，而是来自许久以前存在记忆里的某个春天，它被这小诗轻轻地唤醒了。吴为山先生有个雕塑作品叫《春风》：一个小姑娘裙袂飘飘，头微微扬起，脸上带着笑。其实，《春风》刻画的形象很模糊，我们看不清小女孩的眉眼和表情，但是我们能感觉到她在微风里的快乐，而且能感到那吹起衣裙的应是一阵春风。在某种意义上，我觉得《春风》和这《子夜四时歌》是等价的。     
 
 《诏问山中何所有赋诗以答》（陶弘景）  
 
@@ -45,7 +45,7 @@ Azalea 曾留言[感叹](http://disq.us/p/224fnh0)平凡的董传由苏轼的诗
 
 李志有首歌叫《[热河](https://baike.baidu.com/item/热河/16160359)》，这是首平凡的歌。没有复杂动听的旋律，没有意像唯美的歌词；只有平凡的街，平凡的人，平凡的店铺，却串成了一段故事，这故事好像是从很多人心里映射出来的。很少有人能当长平公主，但是许多人记忆里都有条“热河路”。      
 
-天暗下来了，屋外风似乎小了些，雨还在下。打开手机看了下微信消息，我妈说我前天我从网上订的大闸蟹今天收到了，打算晚饭的时候吃；有几个朋友在讨论时事，主要是 NBA 季前赛全场爆满事件和无锡的高架桥倒塌事件。新泡了壶茶，顺便看了下昨天油炸的豆腐，还剩很多，足以就风。安心地回到桌前，坐等风吹。   
+天暗下来了，屋外风似乎小了些，雨还在下。打开手机看了下微信消息，我妈说我前天从网上订的大闸蟹今天收到了，打算晚饭的时候吃；有几个朋友在讨论时事，主要是 NBA 季前赛全场爆满事件和无锡的高架桥倒塌事件。新泡了壶茶，顺便看了下昨天油炸的豆腐，还剩很多，足以就风。安心地回到桌前，坐等风吹。   
 
 这几天正好在颁发诺贝尔奖，看了得奖预测的朋友告诉我说今年的化学奖有可能发给基因编辑技术，不过实际上是发给了锂电池的发明者。预测基因编辑技术会得奖其实是个没有太大意义的事情，因为几乎可以确定该技术会拿诺奖，问题是哪年，以及给谁。其中，“给谁”是个大问题，参与基因编辑技术发展且有较大贡献的人比较多；而且其中最常用的 CRISPR 技术的发明者间还在闹专利纠纷。如何把握平衡需要评委们费点脑筋。如果“给谁”的问题解决了，“哪年”就不是问题了，肯定会很快。   
 
@@ -64,7 +64,7 @@ Azalea 曾留言[感叹](http://disq.us/p/224fnh0)平凡的董传由苏轼的诗
 
 海德格尔在接受《明镜》的采访时说：   
 
-> 一切都运转起来了，这正是令我不安的地方。这一个推动另一个，运转不歇，技术使人从地球上脱离，连根拔起。     
+> 一切都运转起来了，这正是令我不安的地方。这一个推动另一个，运转不歇，技术使人从地球上脱离，将人连根拔起。     
 
 离海德格尔接受采访已经五十多年了，我们似乎还未被“连根拔起”。他是杞人忧天吗？或许吧。以后会怎样？不好说。      
 
