--- a/content/cn/2019-10-12-typhoon.md
+++ b/content/cn/2019-10-12-typhoon.md
@@ -10,7 +10,7 @@ tags: []
 
 坐在桌前，我看着水杯上缓缓上升的热气，感到一种莫名的惊异：这缥缈的热气如此脆弱，似乎我呼吸稍重，它就会被绕乱成各种形状；但近在咫尺的疾风骤雨却不能对它产生丝毫影响。我想，我只要打开门走出去几步就会被风吹得无法立住，而且会瞬间被淋成落汤鸡，然而现在我却在闲适地看着水杯上的热气发呆。自然，我知道是周围我平时不怎么注意的几面墙和门窗挡住了风雨，让我此刻有此安稳---我已不知如此安稳地在屋子里度过了多少日子，不过只在此风雨之时，这安稳才显得如此真切，舒适。   
 
-葛饰北斋喜描绘透过疾风狂狼看着岿然不动的富士山的场景，而此刻我却在透过水杯上稳稳上飘的热气看着屋外的风雨。这样的反差真有意思；这“意思”或许能画在纸上，却难用语言表达。真如陶县令所说，“欲辨已忘言。”在这真切的闲静里，我胡思乱想着---似乎身体虽然安适，思绪却随着屋外的风雨在飘摇。    
+葛饰北斋喜描绘透过疾风狂浪看着岿然不动的富士山的场景，而此刻我却在透过水杯上稳稳上飘的热气看着屋外的风雨。这样的反差真有意思；这“意思”或许能画在纸上，却难用语言表达。真如陶县令所说，“欲辨已忘言。”在这真切的闲静里，我胡思乱想着---似乎身体虽然安适，思绪却随着屋外的风雨在飘摇。    
 
 我想起了几首小诗。
 
@@ -60,7 +60,7 @@ Azalea 曾留言[感叹](http://disq.us/p/224fnh0)平凡的董传由苏轼的诗
 > 这东西已经占有了人，并且这种占有是如此地明确以至于人只有被如此占有才能是人。   
 
 
-是的，我们在构建一个越来越复杂的结构。如果一个人有能力为这个结构加砖添瓦，他就被称为“有用的人。”人的价值似乎是依附于这个结构。人们觉得是我们自己在设计和制造它，我们在掌控主导权；但是现实是我们正变得停不下来---我们不能控制这个结构，它却在控制着我们。   
+是的，我们在构建一个越来越复杂的结构。如果一个人有能力为这个结构加砖添瓦，他就被称为“有用的人。”人的价值似乎是依附于这个结构的；我们觉得是自己在设计和制造它，我们在掌控主导权；但是现实是我们正变得停不下来---我们不能控制这个结构，它却在控制着我们。   
 
 海德格尔在接受《明镜》的采访时说：   
 
