--- a/content/cn/2019-01-11-lihaku.md
+++ b/content/cn/2019-01-11-lihaku.md
@@ -19,7 +19,7 @@ tags: []
 
 当我把我们中文里常见的版本写给朋友看后，他也吃了一惊。因为这首诗选入了日本的小学课本，他学的就是他写给我看的那版，从来不知道还有其他版本。那么，问题来了，哪个版本才是李白写的原始版本呢？我当时第一反应是，这个流行于日本的肯定不是原版。首先读起来感觉不好，感觉有点粗糙，不像诗了；其次一首诗传到日本，中间发生误传的机会太多，增加了日本版出错的可能；最后，我们读熟了的版本怎么可能是错的？！这最后一条不算啥有说服力的理由，只是我当时心里活动的一个写照。当然，在我看来，前两条理由已经足够说明日本版《静夜思》很可能是误本了。  
 
-不过要让朋友明白自己在日本学了山寨的《静夜思》，我打开电脑，上网搜索材料用以说服他。不过一搜之下，傻眼的人是我，维基百科上赫然写着：
+不过为了让朋友明白自己在日本学了山寨的《静夜思》，我打开电脑，上网搜索材料用以说服他。不过一搜之下，傻眼的人是我，维基百科上赫然写着：
 
 > 《靜夜思》是中國唐代詩人李白所作的流傳最廣泛的一首詩，體裁屬五言樂府詩。詩句在不同朝代的詩集略有不同，現今流傳最廣的版本乃清代文人蘅塘退士（本名孫洙）所編纂的《唐詩三百首》所收錄，但被質疑內容並不忠於原詩。 
 
@@ -52,7 +52,7 @@ tags: []
 
 不过“起头”这个变异倒是没有被遗传下来，估计是用字太过清奇的缘故吧。生物进化的一大谜题是进化中间型的缺失问题，在多数情况下，我们可以在化石里找到生物的祖先特征，当然也可以看到身边现存生物的特征，而介于二者之间的中间类型却往往找不到，导致难以推定祖先物种是如何变化成现在我们看到的样子的。要是进化过程也有如《静夜思》这样完好的版本记录该多好啊。 
 
-和沈德潜同时期的蘅塘退士孙先生整理了《唐诗三百首》，可能是由于其选诗得当吧，该书迅速流行起来，占领了千家万户的大小书架，将唐诗传播到寻常百姓家，其中自然包括了那首已经变了两个字的《静夜思》： 
+和沈德潜同时期的蘅塘退士孙先生整理了《唐诗三百首》。可能是由于其选诗得当吧，该书迅速流行起来，占领了千家万户的大小书架，将唐诗传播到寻常百姓家，其中自然包括了那首已经变了两个字的《静夜思》： 
 
 >  床前明月光，   
 疑似地上霜。  
@@ -61,11 +61,11 @@ tags: []
 
 《唐诗三百首》可算是唐诗选集史上的一朵不凋谢的奇葩，这个版本的《静夜思》作为这朵奇葩上的一片花瓣也就映入了万万千千读书人的眼里，心里。  
 
-了解了《静夜思》的版本演变史，我不得不接受自己从小学了个山寨版《静夜思》的事实（还是不得不感叹一下，这个反转太大了！不过也给我长了个记性，千万别对任何事情感到太有把握，多考虑别的可能性---生活远比我们想象的丰富）。那么问题来了，哪个版本更好呢？要是要是文字的流传也遵照自然选择里优胜劣汰的规则，那留下来的自然是好的了，但是进化里也不尽然是只有好的流传，根据中性进化理论，运气因素也很重要，适应力强的生物也可能因为点背而灭菌呢。所以根据哪个流传广来判断好坏似乎不可取，那分析一下吧。
+了解了《静夜思》的版本演变史，我不得不接受自己从小学了个山寨版《静夜思》的事实（还是不得不感叹一下，这个反转太大了！不过也给我长了个记性，千万别对任何事情感到太有把握，多考虑别的可能性---生活远比我们想象的丰富）。那么问题来了，哪个版本更好呢？要是要是文字的流传也遵照自然选择里优胜劣汰的规则，那留下来的自然是好的了，但是进化里也不尽然是只有好的流传，根据中性进化理论，运气因素也很重要，适应力强的生物也可能因为点背而灭绝呢。所以根据哪个流传广来判断好坏似乎不可取，那分析一下吧。
 
-虽然我第一眼看这首原版《静夜思》，感到各种不通和别扭，但既然它很可能是李白的原始版本，那我自然要放尊重些，多看几遍，跟我们常见的流行版本再比较比较。  
+虽然我第一眼看这首原版《静夜思》，感到各种不通和别扭，但既然它很可能是李白的原始版本，那我自然要放尊重些，更我们的流行版本放一起，多看几遍以作比较。  
 
-也不知是不是心理作用，细看之下，突然觉得我们现行版本里第一句和第三局的两个“明”显得有点扎眼，有点重复了。虽然诗词里上下句间一般要避免使用相同的字，但是重复用字的情况也不是完全没有。这不是判断现行版本不好的依据，我只是奇怪为什么我以前没有注意到。把这个先放一边，看看原版。其实第一次看到原版的时候，让我觉得不自然的就是第一句“床前看月光”里这个“看”字。“明月光”是一个静态描写，想想笼罩在薄纱似的月光里的李白，多美!而“看月光”则有个很突兀的动作加入了进来，习惯了静态画面的我们自然觉得似乎“看”字打破了《静夜思》的宁静。如果我们忘了脑中这第一句静态的基调，重新感受一下，会不会觉得稍微好点呢？在重新感受之前，我还查了一下《古汉语常用字典》，看看“看”字都有些什么意思。书中说“看”字主要有三义：  
+也不知是不是心理作用，细看之下，突然觉得我们现行版本里第一句和第三局的两个“明”显得有点扎眼，有点重复了。虽然诗词里上下句间一般要避免使用相同的字，但是重复用字的情况也不是完全没有。这不是判断现行版本不好的依据，我只是奇怪为什么我以前没有注意到。把这个先放一边，看看原版。其实第一次看到原版的时候，让我觉得不自然的就是第一句“床前看月光”里这个“看”字。“明月光”是一个静态描写，想想笼罩在薄纱似的月光里的李白，多美！而“看月光”则有个很突兀的动作加入了进来，习惯了静态画面的我们自然觉得似乎“看”字打破了《静夜思》的宁静。如果我们忘了脑中这第一句静态的基调，重新感受一下，会不会觉得稍微好点呢？在重新感受之前，我还查了一下《古汉语常用字典》，看看“看”字都有些什么意思。书中说“看”字主要有三义：  
 
 1. 以手遮目而望。  
 2. 瞧，看。可引申为观察。  
