--- a/content/cn/2019-10-12-typhoon.md
+++ b/content/cn/2019-10-12-typhoon.md
@@ -10,7 +10,7 @@ tags: []
 
 坐在桌前，我看着水杯上缓缓上升的热气，感到一种莫名的惊异：这缥缈的热气如此脆弱，似乎我呼吸稍重，它就会被绕乱成各种形状；但近在咫尺的疾风骤雨却不能对它产生丝毫影响。我想，我只要打开门走出去几步就会被风吹得无法立住，而且会瞬间被淋成落汤鸡，然而现在我却在闲适地看着水杯上的热气发呆。自然，我知道是周围我平时不怎么注意的几面墙和门窗挡住了风雨，让我此刻有此安稳---我已不知如此安稳地在屋子里度过了多少日子，不过只在此风雨之时，这安稳才显得如此真切，舒适。   
 
-葛饰北斋喜描绘透过疾风狂浪看着岿然不动的富士山的场景，而此刻我却在透过水杯上稳稳上飘的热气看着屋外的风雨。这样的反差真有意思；这“意思”或许能画在纸上，却难用语言表达。真如陶县令所说，“欲辨已忘言。”在这真切的闲静里，我胡思乱想着---似乎身体虽然安适，思绪却随着屋外的风雨在飘摇。    
+葛饰北斋喜描绘透过疾风狂浪看着岿然不动的富士山的场景，而此刻我却在透过水杯上稳稳上飘的热气看着屋外的风雨。这样的反差真有意思；这“意思”或许能画在纸上，却难用语言表达。真如陶县令所说，“此中有真意，欲辨已忘言。”在这真切的闲静里，我胡思乱想着---似乎身体虽然安适，思绪在却随着屋外的风雨飘摇。    
 
 我想起了几首小诗。
 
@@ -41,7 +41,7 @@ tags: []
 
 鲁迅管“老仆妇”的办法叫“愚君政策”。显然，陶弘景并不觉得他有必要“愚君”，他可以告诉萧道成自己很享受岭上的白云，并直言这云虽多，却“只可自怡悦，不堪持赠君。”他不担心萧皇帝“冬天想到瓜，秋天要吃桃子，”也不担心他下旨令陶先生进贡白云三朵。我想，萧皇帝必是个雅士，陶弘景才能如此心无挂碍地写出这首美妙的小诗。古今诗词里记录了多少各样的人，显赫至帝王，入诗却不令人反感，除了这位萧皇帝，似乎再鲜有人了。    
 
-Azalea 曾留言[感叹](http://disq.us/p/224fnh0)平凡的董传由苏轼的诗而被人记住，平凡的藤野先生由鲁迅的文章而被人记住。我当时[回复](http://disq.us/p/224l231)说：“记录平凡的瞬间在我看来是诗的魅力之一。”其实，我觉得甚至可以说，诗的魅力主要在于记录了平凡的瞬间。平凡的生活里有不平凡的感动；大人物自有悲欢，但是能让人感动的，也一定是人所共有的那份悲欢。当李煜写“春花秋月何时了，往事知多少”时，他写出了人人都能感到却无奈不能控制的情随事变，事随时迁；读者不必同为帝王也能于心有戚。当崇祯皇帝拔剑走向长平公主，并叹“奈何生我家”时，叹出了他作为亡国君主的无奈；然而对此我们却难以感同身受，只是模模糊糊地觉得当皇帝也不是尽啥都好；作公主也有可怜的时候。   
+Azalea 曾留言[感叹](http://disq.us/p/224fnh0)平凡的董传由苏轼的诗而被人记住，平凡的藤野先生由鲁迅的文章而被人记住。我当时[回复](http://disq.us/p/224l231)说：“记录平凡的瞬间在我看来是诗的魅力之一。”其实，我觉得甚至可以说，诗的魅力主要在于记录了平凡的瞬间。平凡的生活里有不平凡的感动；大人物自有悲欢，但是能让人感动的，也一定是人所共有的那份悲欢。当李煜写“春花秋月何时了，往事知多少”时，他写出了人人都能感到却无奈不能控制的情随事变，事随时迁；读者不必同为帝王也能于心有戚。当崇祯皇帝拔剑走向长平公主，并叹“奈何生我家”时，叹出了他作为亡国君主的无奈；然而对此我们却难以感同身受，只是模模糊糊地觉得当皇帝也不是尽啥都好，作公主也有可怜的时候。   
 
 李志有首歌叫《[热河](https://baike.baidu.com/item/热河/16160359)》，这是首平凡的歌。没有复杂动听的旋律，没有意像唯美的歌词；只有平凡的街，平凡的人，平凡的店铺，却串成了一段故事，这故事好像是从很多人心里映射出来的。很少有人能当长平公主，但是许多人记忆里都有条“热河路”。      
 
