--- a/content/cn/2019-10-12-typhoon.md
+++ b/content/cn/2019-10-12-typhoon.md
@@ -60,7 +60,7 @@ Azalea 曾留言[感叹](http://disq.us/p/224fnh0)平凡的董传由苏轼的诗
 > 这东西已经占有了人，并且这种占有是如此地明确以至于人只有被如此占有才能是人。   
 
 
-是的，我们在构建一个越来越复杂的结构。如果一个人有能力为这个结构加砖添瓦，他就被称为“有用的人。”人的价值似乎是依附于这个结构的；我们觉得是自己在设计和制造它，我们在掌控主导权；但是现实是我们正变得停不下来---我们不能控制这个结构，它却在控制着我们。   
+是的，我们在构建一个越来越复杂的结构。如果一个人有能力为这个结构加砖添瓦，他就被称为“有用的人。”人的价值似乎是依附于这个结构的；我们觉得是自己在设计和制造它，我们在掌控主导权；但是现实是我们正变得停不下来---我们不能控制这个结构，它却在控制着我们；我们渐渐忘了自己本来的样子。或许在这样赤手空拳地面对自然里的疾风骤雨时，我们才记起人本来的样子，脆弱而敏感---记得这一点很重要，特别是在人觉得自己已经很强，可以支配自然的时候。      
 
 海德格尔在接受《明镜》的采访时说：   
 
