顺序强迫症！唉。

--- a/content/cn/2019-10-12-typhoon.md
+++ b/content/cn/2019-10-12-typhoon.md
@@ -43,7 +43,7 @@ tags: []
 
 Azalea 曾留言[感叹](http://disq.us/p/224fnh0)平凡的董传由苏轼的诗而被人记住，平凡的藤野先生由鲁迅的文章而被人记住。我当时[回复](http://disq.us/p/224l231)说：“记录平凡的瞬间在我看来是诗的魅力之一。”其实，我觉得甚至可以说，诗的魅力主要在于记录了平凡的瞬间。平凡的生活里有不平凡的感动；大人物自有悲欢，但是能让人感动的，也一定是人所共有的那份悲欢。当李煜写“春花秋月何时了，往事知多少”时，他写出了人人都能感到却无奈不能控制的情随事变，事随时迁；读者不必同为帝王也能于心有戚。当崇祯皇帝拔剑走向长平公主，并叹“奈何生我家”时，叹出了他作为亡国君主的无奈；然而对此我们却难以感同身受，只是模模糊糊地觉得当皇帝也不是尽啥都好，作公主也有可怜的时候。   
 
-李志有首歌叫《[热河](https://baike.baidu.com/item/热河/16160359)》，这是首平凡的歌。没有复杂动听的旋律，没有意像唯美的歌词；只有平凡的街，平凡的人，平凡的店铺，却串成了一段故事，这故事好像是从很多人心里映射出来的。很少有人能当长平公主，但是许多人记忆里都有条“热河路”。      
+李志有首歌叫《[热河](https://baike.baidu.com/item/热河/16160359)》，这是首平凡的歌。没有复杂动听的旋律，没有意像唯美的歌词；只有平凡的街，平凡的店铺，平凡的人，却串成了一段故事，这故事好像是从很多人心里映射出来的。很少有人能当长平公主，但是许多人记忆里都有条“热河路”。      
 
 天暗下来了，屋外风似乎小了些，雨还在下。打开手机看了下微信消息，我妈说我前天从网上订的大闸蟹今天收到了，打算晚饭的时候吃；有几个朋友在讨论时事，主要是 NBA 季前赛全场爆满事件和无锡的高架桥倒塌事件。新泡了壶茶，顺便看了下昨天油炸的豆腐，还剩很多，足以就风。安心地回到桌前，坐等风吹。   
 
