未尽的一点点

--- a/content/cn/2019-11-24-whenbusy.md
+++ b/content/cn/2019-11-24-whenbusy.md
@@ -20,9 +20,11 @@ tags: []
 
 我曾听，见过别人的话，说看书，学习的目的是理解世界（自然，社会）如何运行。我没有这样大的野心，因为我觉得理解世界的运行，哪怕是理解其中的一小部分，都需要一个人一生皓首穷经，探索耕耘，多数时候恐怕还不能至。世界这般复杂，怀着这样大的目标看书的话，我估计我很快就会失去所有兴趣。那看书是为了了解自己吗？我想也不是。在我看来，了解自己最好的方法，一是跟别人打交道，了解别人，知道自己和别人的不同才能了解自己；二是去做事，在实际生活中，通过自己做的每件事和自己的每个选择，我们可以看到真实的自己。当然，通过看书也是可以了解自己的，特别是当书中的某些人和事引起自己共鸣的时候。但这应该不是我看书主要的目的。     
 
-为什么想看书？这个问题我想一时恐怕难有答案。不过写了这么多，想到结果却是可怜的“此题无解”，不免有些丧气。强行写一个吧---虽然有些为了答案而答案的意思---我想，看书是为了能超越时空，到别的时间，地点，甚至是别人的思想里去看看。那些看到的风景或许会变成我的记忆的一部分，于是我也似乎在那些时，那些地生活过，和那些思想交流过。我的世界包括我生活的世界和我“见过”的世界，我想我看书的目的是为了构建那个我“见过”的世界吧。  
+为什么想看书？这个问题我想一时恐怕难有答案。不过写了这么多，想到结果却是可怜的“此题无解”，不免有些丧气。强行写一个吧---虽然有些为了答案而答案的意思---我想，看书是为了能超越时空，到别的时间，地点，甚至是别人的思想里去看看。那些看到的风景或许会变成我的记忆的一部分，于是我也似乎在那些时，那些地生活过，和那些思想交流过。我的世界包括我生活的世界和我“见过”的世界，我想我看书的目的是为了构建那个我“见过”的世界吧。这么一想，古人说的，“读万卷书，行万里路”看来也是扩展一个人生活和“见识”过的世界的意思吧。   
 
-码了这么些字，那本想看的书就在手边，终于没有翻开，只有一颗想翻的心。
+至于选择打开哪本书来看，或者说我想通过阅读构建一个什么样子的世界，这是个暂时没有成熟答案的问题，或许永远不会有成熟的答案；另一个暂时没有答案的问题是我期待构建的世界和我生活的世界是什么关系？我生活的世界自然会影响到我如何看待读到的那个世界，而我阅读到的东西也会影响我如何看待自己生活的世界。这个交互影响的过程或许会陪伴我一生。那我会给自己生活的世界带来什么影响呢？一个普普通通的人能带给自己周围的影响几乎是可以忽略的，除了和自己相关的少数几个人。这并不是个令人遗憾的事，相反，我觉得这样挺好。如果努力工作，认真生活的话，或许能影响到身边的亲近的几个人，或者让自己在耕耘的一亩三分地多少有些变化吧。如果这些影响和变化不是让大家讨厌的那种，那就够了。     
+
+码了这么些字，那本想看的书就在手边，终于没有翻开，只有一颗想翻的心。先存着，以待来日吧。
 
 
 
